--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -53,7 +53,7 @@
         \begin{itemize}
             \item イベント到着曲線は, 周期的およびイベント駆動型 (割り込み駆動型など) の両方のアクティベーションをモデル化するのに十分一般的である [47]
             \item 例えば, タスク $T_{x}$ が定期的にトリガされる場合, その到着曲線は $\eta_{x}^{e}(\Delta)=\left[\frac{\Delta}{\operatorname{period}(x)}\right]$ として表すことができる
-            \item 非ソースタスクは, 導出されたアクティベーションカーブに従ってトリガされる
+            \item 非ソースタスクは, 導出されたアクティベーション曲線に従ってトリガされる
             \item アクティベーション曲線は, 先行タスクによるアクティベーションレイテンシを反映し, 応答時間に依存するリリースジッターを考慮して, 到着曲線から取得される
         \end{itemize}
     \end{frame}
