--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/ros_scheduling.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/ros_scheduling.tex
@@ -51,7 +51,7 @@
     \begin{itemize}
         \item 通常の固定優先度スケジューリングと比較すると, このアルゴリズムにはいくつかの変わった特性がある
         \item まず, 処理ウィンドウ中に到着したメッセージは, 残りの全てのコールバックに依存する次のポーリングポイントまで考慮されない
-        \item これは, 優先度の低いコールバックが現在の処理ウィンドウを引き延ばすことによって, 優先度の高いコールバックを暗黙的にブロックする可能性があるため, 優先度の逆転につながります
+        \item これは, 優先度の低いコールバックが現在の処理ウィンドウを引き延ばすことによって, 優先度の高いコールバックを暗黙的にブロックする可能性があるため, 優先度の逆転につながる
     \end{itemize}
 \end{frame}
 
