--- a/paper/2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
+++ b/paper/2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
@@ -6,7 +6,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item ROS (ロボットオペレーティングシステム) [1] は, 現在最も人気のあるフレームワークであり, ロボットソフトウェア開発のデファクトスタンダードである2010 年にバージョン 1.0 がリリースされて以来, ROS は産業界と学界の両方で何十万人もの開発者と研究者によって使用され, 膨大な数のさまざまな種類のロボットシステムを動かしてきた [2], [3]
-        \item ROS の主要な哲学は, ソフトウェアのモジュール性と構成可能性を促進することによって, ロボットソフトウェア開発の生産性を促進することであるが, これはいくつかの根本的な欠点にもつながります
+        \item ROS の主要な哲学は, ソフトウェアのモジュール性と構成可能性を促進することによって, ロボットソフトウェア開発の生産性を促進することであるが, これはいくつかの根本的な欠点にもつながる
         \item 主な欠点は, リアルタイム機能が不足していることである
         \item ロボットでの計算は通常, タイミングの制約を受けるため, ROS の広範な普及が制限される [4]
     \end{itemize}
@@ -16,7 +16,7 @@
     \begin{itemize}
         \item 2017年からリリースされた第2世代のROSであるROS2[5]は, ROSの成功したコンセプトを継承し, 改良された基盤の上に載せています[6].
         \item ROS2における主な検討事項は, 強力なリアルタイム性をサポートすることです.
-        \item 例えば, ROS2は, リアルタイムデータ交換のためのプロセス間通信ミドルウェアとしてDDS（Data Distribution Service）[7]を採用し, （Linux上でのみ動作するのではなく）リアルタイムOS上に展開でき, 制御指向コードパス上のリアルタイムセーフなリソース事前割り当てをサポートします.
+        \item 例えば, ROS2は, リアルタイムデータ交換のためのプロセス間通信ミドルウェアとしてDDS (Data Distribution Service) [7]を採用し,  (Linux上でのみ動作するのではなく) リアルタイムOS上に展開でき, 制御指向コードパス上のリアルタイムセーフなリソース事前割り当てをサポートします.
     \end{itemize}
 \end{frame}
 
