--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
@@ -5,98 +5,92 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        必要な背景知識と ROS-Llama の基礎となる主要な分析概念を簡単にまとめます
+        ROS-Llamaの基礎となる必要な背景知識と主な解析コンセプトを簡単にまとめる
     \end{itembox}
 \end{frame}
 
 \begin{frame}{ROS}
     \begin{itemize}
-        \item ROS フレームワークは, ロボット工学アプリケーション向けの人気のあるオープンソースミドルウェアおよびコンポーネントリポジトリである [1]
-        \item 本論文は特に, 第一世代のROSフレームワークの最近の主要なリファクタリングであるROS 2 [2]に関連している
-        \item 簡潔にするために, 本論文ではバージョン番号を省略する
+        \item ROSフレームワークは, ロボットアプリケーションのための一般的なオープンソースのミドルウェアとコンポーネントリポジトリである[1]
+        \item 本論文は, 特に, 第一世代のROSフレームワークの最近の主要なリファクタリングであるROS 2 [2]に関連する
+        \item 簡潔さを保つため, 本論文ではバージョン番号を省略する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS は, 通常 Linux に展開される成熟した機能豊富なミドルウェアである
-        \item レイテンシ管理に不可欠な重要なランタイム要素であるトピック, コールバック, エグゼキュータに焦点を当てている
+        \item ROSは, 通常Linux上に展開される成熟した機能豊富なミドルウェアである
+        \item 我々は, レイテンシ管理に不可欠なランタイムの主要要素であるトピック, コールバック, エグゼキュータに着目している
+        \item すでに述べたように, ROSはpublish/subscribeインフラを中心に構築されており, デプロイの選択にはほとんど無頓着である
+        \item したがって, ROSアプリケーションは, 複数のホスト, コア, プロセス, およびスレッドにまたがることができる
+        \item 自動レイテンシ管理の目的では, Linuxを実行している共有メモリマルチコアシステムが自然な範囲であり, 我々はここに注意を制限する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item すでに述べたように, ROS は, 展開の選択をほとんど意識しない publish/subscribe インフラストラクチャを中心に構築されている
-        \item したがって, ROS アプリケーションは, 複数のホスト, コア, プロセス, およびスレッドにまたがることができる
-        \item 自動レイテンシ管理の目的では, Linux を実行する共有メモリマルチコアシステムが自然な範囲であり, 我々はここに注意を限定する
+        \item 実装レベルでは, ROSアプリケーションは, それぞれが1つ以上のスレッドからなる1つ以上のプロセスで構成され, 順番にエグゼキュータ (すなわち, コールバックを呼び出すROSライブラリ機能) を実行する
+        \item 各コールバックは, 特定のエグゼキュータと関連付けられている
+        \item 新しいメッセージがトピックに投稿されると, ROSミドルウェアは, メッセージのコピーがトピックのsubscriberにサービスを提供するエグゼキュータをホストする全てのスレッドに配布されることを保証する
+        \item 標準的な構成では, ROSは $D D S$ ミドルウェアに依存して, エグゼキュータ間でメッセージを仲介しており, 適切なDDS実装が複数存在する[3-5]
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 概念レベルでのトピックとコールバックについては, セクションI で既に説明した
-        \item 実装レベルでは, ROS アプリケーションは 1 つまたは複数のプロセスで構成され, 各プロセスは 1 つまたは複数のスレッドで構成され, 次にエグゼキュータ (すなわち, コールバックを呼び出す ROS ライブラリ機能) を実行する
-        \item 各コールバックは, 特定のエグゼキュータに関連付けられている
-        \item 新しいメッセージがトピックに投稿されると, ROS ミドルウェアは, トピックのsubscriberにサービスを提供するエグゼキュータをホストする全てのスレッドに, メッセージのコピーが確実に配信されるようにする
-        \item 標準的な構成では, ROSはエグゼキュータ間でメッセージを仲介するためにDDSミドルウェアに依存しており, 適切なDDS実装が複数存在する[3-5]
+        \item エグゼキュータが新しいメッセージが利用可能であることを通知されると, 対応するコールバックがアクティブになり, 実行のためにキューに入れられる
+        \item したがって, コールバックがメッセージを処理するレイテンシは, 2つの主要な要因によって決定される
+        \item (i) OSがそれぞれのエグゼキュータをホストするスレッドに割り当てるプロセッサ時間, および (ii) エグゼキュータが保留中のコールバックの起動をどのようにシーケンスするかによって発生する待ち行列のレイテンシ時間である
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 新しいメッセージが利用可能であることがエグゼキュータに通知されると, 対応するコールバックがアクティブになり, 実行のためにキューに入れられる
-        \item したがって, コールバックがメッセージを処理するレイテンシは, 2つの主要な要因によって決定される (i) OSがそれぞれのエグゼキュータをホストするスレッドに割り当てるプロセッサ時間, および (ii) エグゼキュータが保留中のコールバックの起動をどのようにシーケンスするかによって発生する待ち行列のレイテンシ
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 本論文の目的では, 側面 (i) のエグゼキュータスレッドのスケジューリングが主な関心事である
-        \item これは, 自動レイテンシマネージャーが実行時に制御できる主な要因であるためである
-        \item 側面 (ii) の待ち行列のレイテンシも, コールバックのレイテンシに大きな影響を与え, 分析するのは決して簡単ではない [6] が, (現在の ROS バージョンでは) ランタイム管理には適していない
+        \item 我々の目的では, 側面(i)-エグゼキュータスレッドのスケジューリング-は, 自動レイテンシマネージャが実行時に制御できる主要な要因であるため, 主な関心事である
+        \item (ii)のキューイングレイテンシは, コールバックレイテンシに大きな影響を与え, 決して分析が容易ではないが[6], (現在のROSバージョンでは)ランタイム管理には適していない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{応答時間分析}
     \begin{itemize}
-        \item 我々は, (ii), すなわち, ROSのデフォルトのエグゼキュータによって管理されるコールバックの応答時間を制限するために, Casiniらによる先行研究[6]に依存している
-        \item Casini らは, ROS システムを, アクティベーション関係によって接続されたコールバックの有向 非循環グラフ (DAG) としてモデル化し, 処理チェーン, すなわちコールバック DAG の任意のパスのエンドツーエンドレイテンシ境界について, 実行者を意識した最悪応答時間を提供しています
-        \begin{itemize}
-            \item 実際には, ROSアプリケーションは常に非周期的であるとは限らない
-            \item ROS-Llamaが抽出されたコールバックグラフのサイクルを回避する方法については, Sec.Vで説明する
-        \end{itemize}
+        \item ROSのデフォルトのエグゼキュータによって管理されるコールバックの応答時間を制限するために, Casiniらによる先行研究[6]に依存している
+        \item Casiniらは, ROSシステムを, アクティベーション関係によって接続されたコールバックの有向非巡回グラフ (DAG) としてモデル化し, 処理チェーンのためのエグゼキュータを考慮した最悪応答時間, すなわちコールバックDAG内の任意のパスのエンドツーエンドレイテンシ境界を提供している
+              \begin{itemize}
+                  \item 実際には, ROSアプリケーションは常に非周期的であるとは限らない
+                  \item ROS-Llama が抽出されたコールバックグラフのサイクルを回避する方法について, セクションV.で議論する
+              \end{itemize}
+        \item Casiniらの処理チェーンは, ROS-Llamaが管理するcause-effectチェーンに直接対応する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{予約}
     \begin{itemize}
-        \item Casiniらは各スレッドの供給境界関数 (SBF) [7] が既知であるという仮定の下で, 最悪応答時間を提供する
-        \item SBFはあるスレッドがOSのスケジューラから与えられた区間にどれだけの処理時間を割り当てられることが保証されているかを特徴づける
-        \item これにより, スケジューリング分析では, 長さ $\Delta$ の任意の間隔で $s b f(\Delta)$ 単位の処理時間を提供する分離されたコアで実行されているかのように, 各スレッドを分析できる
-        \item このような SBF 保証を取得する標準的な方法は, 予約ベースのスケジューリングを使用することである
-        \item これは, Linux では SCHED\_DEADLINE ポリシーによって実現される [8]
+        \item より正確には, Casiniらは, 各スレッドについて供給境界関数 (SBF) [7]が既知であるとの前提で, 最悪応答時間を提供している
+        \item SBFは上記(i)の側面, すなわち, あるスレッドがOSのスケジューラからある区間にどれだけの処理時間を割り当てられることが保証されているかを特徴づけるものである
+        \item これにより, スケジューラビリティ解析は, 各スレッドを, 長さ $\Delta$ の任意の区間で $s b f(\Delta)$ 単位の処理時間を提供する孤立したコア上で動作しているかのように解析できるようになる
+        \item このようなSBF保証を得るための標準的な方法は, LinuxではSCHED\_DEADLINEポリシー[8]によって実現されている予約ベースのスケジューリングを使用することである
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item SCHED\_DEADLINE スケジューラは, ハード固定帯域幅サーバ (H-CBS) [9] 予約スキームを GRUB [10] 帯域幅再利用と組み合わせて実装する
-        \item 各予約 $r$ はバジェット $\operatorname{budget}(r)$ と期間 $\operatorname{period}(r)$ で特徴付けられ, スケジューラは各予約が期間$\operatorname{period}(r)$の各期間で少なくともバジェット$(r)$単位のプロセッササービスを受けることを保証していることに注意
-        \item 保証は, 帯域幅 $b w(r)=\frac{\operatorname{budget}(r)}{\text { period }(r)}$ としてより便利に指定される場合がある
+        \item SCHED\_DEADLINEスケジューラは, H-CBS (Hard Constant Bandwidth Server) [9] 予約スキームをGRUB [10] 帯域幅再利用と組み合わせて実装している
+        \item 具体的なスケジューリング規則は今のところ関係ないが, 各予約 $r$ はバジェット $\operatorname{budget}(r)$ と期間 $\operatorname{period}(r)$ で特徴付けられ, スケジューラは各予約が期間 $(r)$ の各期間で少なくともバジェット $(r)$ ユニットのプロセッササービスを受けることを保証している
+        \item この保証は, 帯域幅 $b w(r)=\frac{\operatorname{budget}(r)}{\text { period }(r)}$ としてより簡便に指定されることもある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{到着曲線}
     \begin{itemize}
-        \item Casiniらの分析[6]のもう一つの重要な仮定は, 各イングレスコールバック,  すなわち, 外部イベントソースによってトリガされたコールバックについて, 到着曲線が既知で あるということである
-        \item イベントソースは, それ自体がコールバックではなく, 1つ以上のトピックにメッセージを送る（例えば, センサー値を取得してコールバックDAGに送り込むデバイスドライバなど）
-        \item 到着曲線 $\eta_{c}(\Delta)$ は, 長さ $\Delta$ の任意の間隔でのコールバック $c$ のアクティベーションの最大数を制限する
+        \item 最後に, Casiniらの分析[6]のもう1つの重要な仮定は, 外部イベントソースによってトリガーされたコールバックについて, 到達曲線が既知であること
+        \item イベントソースは, それ自体がコールバックではなく, 1つ以上のトピック (例えば, センサ値を取得してコールバックDAGに送り込むデバイスドライバ) にメッセージを送信するものである
+        \item 到着曲線 $\eta_{c}(\Delta)$ は, 長さ $\Delta$ の任意の与えられた間隔にわたってコールバック $c$ のアクティベーションの最大数を制限する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 到着曲線と呼び出しごとの最悪実行時間 (WCET) $e_{c}$ が与えられると, コールバックのリクエスト 境界関数 (RBF) を $r b f_{c}(\Delta)=e_{c} \cdot \eta_{c}(\Delta)$ として決定するのは簡単であり, これは, 長さ$\Delta$の間隔におけるコールバックcの全ての起動の最大累積プロセッサ需要を制限する
-        \item エグゼキュータの SBF とその全てのコールバックの RBF の相互作用は, Casini らの分析 [6] の中核にあり, その分析を適用するには, かなりのリアルタイム専門知識とシステム内部の包括的知識が必要であるという事実を浮き彫りにした
+        \item 到着曲線と呼び出しごとの最悪実行時間 (WCET)  $e_{c}$ が与えられると, コールバックの要求境界関数 (RBF) を $r b f_{c}(\Delta)=e_{c} \cdot \eta_{c}(\Delta)$ として決定することは簡単であり, これは, 長さ $\Delta$ の間隔におけるコールバック $c$ の全ての起動の最大累積プロセッサ要求を制限するものである
+        \item エグゼキュータのSBFとその全てのコールバックのRBFの相互作用は, Casiniらの分析[6]の核心であり, その分析を適用するには, かなりのリアルタイム専門知識とシステム内部の包括的知識が必要であることを強調している
     \end{itemize}
 \end{frame}
