--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/conclusion.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/conclusion.tex
@@ -3,13 +3,10 @@
 \section{CONCLUSION}
 \label{sec: conclusion}
 
-\begin{frame}{}
+\begin{frame}{結論}
     \begin{itemize}
-        \item  $\operatorname{ROS} 2$ 向けの最初の自動レイテンシマネージャーである ROS-Llama (Sec
-\item IV) を発表した
-\item その設計は, ROS エコシステムの要件と制約を注意深く分析することによって形作られた (セクション III)
-\item 本論文の評価では, ROSLlama が実用的で有益であり, デフォルトの CFS ベースラインまたは重要度が単調な SCHED\_RR ベースラインのいずれよりも, 負荷がかかった状態でより優れたレイテンシ制御を達成することが示された
-\item 最後に, ROS-Llama に関する本論文の作業により, ROS と Linux における実用的な関連性と現在の制限に関する多くの未解決の分析問題について, より良い評価が得られた
-\item この有望な分野での進歩を促進することに関心のあるVII
+        \item ROS 2のための最初の自動レイテンシマネージャであるROS-Llama を提案した
+        \item その設計は、ROSエコシステムの要件と制約の慎重な分析によって形作られている
+        \item 我々の評価では, ROS-Llamaは実用的で有益であり, デフォルトのCFSベースラインやSCHED\_RRベースラインのいずれよりも負荷の高い状態でより良いレイテンシ制御を達成することが示された
     \end{itemize}
 \end{frame}
