--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
@@ -1,147 +1,150 @@
 % !TeX root = main.tex
 
-\section{Evaluation}
+\section{EVALUATION}
 \label{sec: evaluation}
 
-\begin{frame}{}
+\begin{frame}{実験環境}
     \begin{itemize}
-        \item Raspberry Pi4B によって制御される Turtlebot 3 "Burger" で ROS-Llama を評価した
-\item Raspberry Pi は, $600 \mathrm{MHz}{ }^{2}$ でクロックされる 4 つのコアを備えた ARM A72 CPU を備えている
-\item システムは, Eclipse の Cyclone DDS (バージョン0.5.1-1)
-\item (*2): プロセッサは $1.2 \mathrm{GHz}$ 設定もサポートしている
-\item しかし, この周波数は, 過熱により連続動作で維持できず, コアの予測不可能な熱スロットリングにすぐにつながります
-\item 動的周波数スケーリングは本論文の範囲を超えているため, 安定した $600 \mathrm{MHz}$ 設定に焦点を当てる
+        \item ROS-Llama を Raspberry Pi4B で制御された Turtlebot 3 "Burger" で評価した
+        \item Raspberry Piは, $600 \mathrm{MHz}$ で動作する4つのコアを持つARM A72 CPUを搭載し, システムはPREEMPT-RTパッチ付きの標準Linuxカーネル (バージョン4.19.71-rt24-raspi2) で, EclipseのCyclone DDS (バージョン0.5.1-1) によるROS 2 "Dashing Diademata" が動作している
+              % \item プロセッサは $1.2 \mathrm{GHz}$ の設定もサポートしている
+              % \item しかし, この周波数はオーバーヒートにより連続動作が維持できず, すぐにコアの予測できないサーマルスロットリングにつながる
+              % \item 動的な周波数スケーリングは本論文の範囲外であるため, ここでは安定した $600 \mathrm{MHz}$ 設定に焦点を当てる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{ROS コンポーネント}
+
+\subsubsection{ROS components}
+\label{sssec: ros components}
+
+\begin{frame}{ROSコンポーネントの配置}
+    \begin{block}{Turtlebot 用ドライバ}
+        ロボットのハードウェア (レーザースキャナ, オドメータ, 電気モーターで動く車輪) にROSインタフェースを提供する Turtlebot 用ドライバ
+    \end{block}
+    \begin{block}{ROSナビゲーションスタック}
+        ナビゲーション計画, 経路追従, および自己位置特定を含む, 車輪付き移動ロボットのための一般的なナビゲーションプリミティブを実装
+    \end{block}
+    \begin{block}{オブジェクトトラッカーペイロード}
+        ビデオシーケンスを通して指定されたオブジェクトを追跡し, 計算負荷の高いミッションクリティカル (セーフティクリティカルではない) ペイロードの典型例として機能する
+    \end{block}
+\end{frame}
+
+\begin{frame}{カメラのシミュレート方法}
     \begin{itemize}
-        \item 上に, 3 つの ROS コンポーネントをデプロイした
-\item (1) Turtlebot 用のドライバー
-\item ロボットのハードウェア (レーザースキャナー, 走行距離計, 電気モーターで駆動される車輪) への ROS インターフェイスを提供する
-\item (2) ROS ナビゲーションスタック, および (3) オブジェクトトラッカーペイロード
+        \item 本論文のセットアップでは, VOT 2018チャレンジ[20, 21]から取得したcarlビデオを繰り返し再生してカメラをシミュレートした
+        \item このシナリオでは, オブジェクトトラッカーはシーンを通じて車を追跡することが課題となっている
+        \item Raspberry Piとパッケージ開発者が推奨するハードウェア($2.6 \mathrm{Ghz}$ でクロックされた4コアのIntel $i 7-6700 \mathrm{HQ}$ )の間の大きな性能差を補うために, 我々はそれに応じてビデオをダウンサンプリングした
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+
+\subsubsection{Latency goals}
+\label{sssec: latency goals}
+
+\begin{frame}{コールバックチェーン全体像}
+    \fitimage{
+        表に示すコールバックチェーンに対して, レイテンシ目標を設定した
+    }{input_chains}
+\end{frame}
+
+% \begin{frame}{}
+% \begin{itemize}
+%     \item ハートビートチェーンは, $100 \mathrm{~ms}$ の周期を持つウォッチドッグタイマを管理することで, ハートビートの発生を防ぐだけである
+% \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 最初の 2 つの機能チェーンは, ロボットの車輪の動きに関するものである
+%         \item パイロットチェーンは, 次のモーターコマンドの計算を担当する計算量の多いローカルプランナーコールバックと, その後に続く, 電気モーターに送信するコマンドをエンコードする短いコールバックで構成されている
+%         \item $125 \mathrm{~ms}$ のレイテンシ目標は, モーターがローカルプランナーのコマンドを1周期に1回受信することを保証する
+%         \item オドメトリナビチェーンは, $50 \mathrm{~ms}$ ごとに計測された車輪の動きをプランナーに報告する
+%         \item オドメトリの更新が毎周期届くように, すなわち, 最大 $50 \mathrm{~ms}$ のサンプリングレイテンシを含む2つの計測値の間隔が $125 \mathrm{~ms}$ 以下に収まるように, レイテンシ目標を $75 \mathrm{~ms}$ に設定した
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 次の3つのチェーンは, ロボットのセルフローカライゼーションをカバーしている
+%         \item ローカライゼーションでは, レーザースキャンと内部マップを利用して, ロボットの現在位置を推定する
+%         \item レーザーはロボットと一緒に動くので, スキャンを解釈するためにはロボットの動きと向きに関する情報, すなわちオドメトリも必要である
+%         \item この2つの入力は, レーザースキャナーチェーンおよびオドメトリロケーションチェーンによって提供される
+%         \item ローカライゼーションチェーンでは, これらの入力を統合し, 位置推定を行う
+%         \item このチェーンについては, 第VII章で再度述べる
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item この推定値は, レーザースキャンの撮影時刻から数えて1秒後に失効する
+%         \item このため, ローカライゼーションコンポーネントにはタイミングの制約がある
+%         \item ローカライゼーション推定値がデッドライン切れになると, ロボットはナビゲートできなくなり, 緊急停止を行う
+%         \item そのため, レーザースキャナーと最終的な位置特定コールバックの間のエンドツーエンドレイテンシを最大1秒にする必要がある
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item レーザースキャナは $5 \mathrm{~Hz}$ で回転し, $200 \mathrm{~ms}$ ごとに1回のスキャンが可能である
+%         \item 実際には, 個々のスキャンがハードウェアによって不完全に送信され, 解釈できないことがあることがわかった
+%         \item このようなスキャンを考慮すると, 最悪でも $400 \mathrm{~ms}$ のサンプリングレイテンシが発生し, $600 \mathrm{~ms}$ が処理に残される
+%         \item $150 \mathrm{~ms}$ はレーザースキャナーチェーンに, $450 \mathrm{~ms}$ はローカライズチェーンに割り当てた
+%         \item オドメトリについては, さらに $50 \mathrm{~ms}$ のサンプリングレイテンシを考慮する必要があり, $100 \mathrm{~ms}$ をオドメトリロックチェーンに残した
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 最後に, tracker chainはイメージトラッカーをカバーする
+%         \item このチェーンは, 定期的に (ディスクから) フレームを取得し, /rgbトピックに送信する (シミュレートされた) カメラと, マークされたオブジェクトを追跡し, 最新のフレームでその位置を出力するトラッカーをカバーする
+%         \item 割り当てられたレイテンシゴールは, 全てのフレームが次のフレームが到着する前に処理されるようにし, トラッカーが通常の条件下で遅れをとらないようにする
+%         \item しかし, トラッカーチェーンはデグレードの順番も1番目で, これはその出力が「あると便利」だが, ロボットの正しい動作には必須ではないことを反映している
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 我々は, 全てのレイテンシの目標は, システムインテグレータが知っている高レベルの機能的な考慮事項とハードウェアの特性から派生していることを強調する
+%     \end{itemize}
+% \end{frame}
+
+
+\subsubsection{Baselines}
+\label{sssec: baselines}
+
+\begin{frame}{比較対象1}
+    \begin{block}{比較対象1}
+        標準的なLinuxのセットアップで, スレッドはCFSを使用して4つのコア全てにグローバルにスケジューリングされる
+    \end{block}
+    \vspace{5mm}
     \begin{itemize}
-        \item ROS ナビゲーションスタック [18] は, ナビゲーションプランニング, 経路追従, および自己位置推定を含む, 車輪付き移動ロボット用の一般的なナビゲーションプリミティブを実装する
-\item オブジェクトトラッカー [19] は, ビデオシーケンスを通じて指定されたオブジェクトを追跡し, 計算量の多いミッションクリティカルな (しかしセーフティクリティカルではない) ペイロードの典型的な例として機能する
+        \item これはROSのデフォルトの設定であり, システムインテグレータやコンポーネント開発者に代わってリアルタイムの専門知識を必要としない, 唯一の利用可能な選択肢
+        \item ROS-Llamaのオーバヘッドがないため, ROS-Llamaの実行コストがその利点を上回るかどうかという問題に関して, 公平なベースラインを提供する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{比較対象2}
+    \begin{block}{比較対象2}
+        \begin{itemize}
+            \item ROS-Llamaの原型で, 応答時間解析を用いずに, レイテンシが重要なエグゼキュータを SCHED\_RRでスケジューリングする
+            \item デグレードの順序に従って優先度を割り当て, デグレードの順序が遅いエグゼキュータを, 順序が早いチェーンにのみ対応するエグゼキュータより優先させることで, デグレードを緩やかにする
+        \end{itemize}
+    \end{block}
+    \vspace{5mm}
     \begin{itemize}
-        \item 本論文の設定では, VOT 2018 チャレンジ [20, 21] から取得したカールのビデオを繰り返し再生して, カメラをシミュレートした
-\item このシナリオでは, オブジェクトトラッカーはシーン内で車を追跡する役割を担っている
-\item Raspberry Pi と, パッケージ開発者が推奨するハードウェア ($2.6 \mathrm{Ghz}$ でクロックされる 4 つのコアを備えた Intel $i 7-6700 \mathrm{HQ}$) との間の大きなパフォーマンスの違いを補うために, それに応じてビデオをダウンサンプリングした
+        \item このベースラインを使用して, 応答時間解析の使用によりROS-Llamaの判断がどの程度改善されるかを評価する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{レイテンシの目標}
-    \begin{itemize}
-        \item 表 I に示すコールバックチェーンのレイテンシの目標を構成した
-    \end{itemize}
-\end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item ハードウェアがリセットされないようにする
-\item 最初の 2 つの関数チェーンは, ロボットの車輪の動きに関係している
-\item パイロットチェーンは, 次のモーターコマンドの計算を担当する計算集約型のローカルプランナーコールバックと, それに続く電気モーターへの送信用のコマンドをエンコードする短いコールバックで構成される
-    \end{itemize}
-\end{frame}
+\subsubsection{Scenario}
+\label{sssec: scenario}
 
-\begin{frame}{}
+\begin{frame}{実験シナリオ}
     \begin{itemize}
-        \item $125 \mathrm{~ms}$ レイテンシの目標により, モーターは周期ごとにローカルプランナーのコマンドを確実に受け取る
-\item odometry-nav チェーンは, 測定された車輪の動きを $50 \mathrm{~ms}$ ごとにプランナーに報告する
-\item $75 \mathrm{~ms}$ のレイテンシ目標を設定して, オドメトリの更新が全ての期間に届くようにする
-\item すなわち, 最大 $50 \mathrm{~ms}$ のサンプリングレイテンシを含む 2 つの測定値間のギャップが $125 \mathrm{~ms}$ 未満に留まるようにする
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 次の 3 つのチェーンは, ロボットの自己位置特定をカバーしている
-\item ローカリゼーションコンポーネントは, レーザースキャンと内部マップに依存して, ロボットの現在位置の妥当な推定値を絞り込みます
-\item レーザーはロボットと共に移動するため, これらのスキャンを解釈するには, ロボットの動きと向きに関する情報, すなわちオドメトリも必要である 2 つの入力は, laser-scanner チェーンと odometry-loc チェーンによって提供される
-\item ローカリゼーションチェーンには, 入力のマージと位置推定の計算が含まれる
-\item このチェーンについては, セクションで再検討する
-\item VII.
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item ローカリゼーションの推定値は, 基礎となるレーザースキャンが取得された時刻から数えて 1 秒後にデッドライン切れになる
-\item これにより, ローカリゼーションコンポーネントにタイミングの制約が課される
-\item ローカリゼーションの推定がデッドライン切れになると, ロボットはナビゲートできず, 緊急停止を実行する
-\item そのため, レーザースキャナーと最終的なローカリゼーションコールバックの間のエンドツーエンドレイテンシを最大 1 秒にする必要がある
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item レーザースキャナは $5 \mathrm{~Hz}$ で回転し, $200 \mathrm{~ms}$ ごとに 1 つのスキャンを生成できる
-\item 実際には, 個々のスキャンがハードウェアによって不完全に送信されることがあり, 解釈できないことが分かった
-\item このようなスキップされたスキャンを考慮に入れると, $400 \mathrm{~ms}$ の最悪サンプリングレイテンシが発生し, $600 \mathrm{~ms}$ が処理のために残される
-\item $150 \mathrm{~ms}$ をレーザースキャナーチェーンに割り当て, $450 \mathrm{~ms}$ をローカリゼーションチェーンに割り当てた
-\item オドメトリについては, 追加の $50 \mathrm{~ms}$ のサンプリングレイテンシを考慮する必要があり, $100 \mathrm{~ms}$ をオドメトリロックチェーンに残する
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 最後に, トラッカーチェーンがイメージトラッカーをカバーする
-\item チェーンは, (ディスクから) フレームを定期的に取得して /rgb トピックに送信する (シミュレートされた) カメラと, マークされたオブジェクトを追跡し, 最新のフレームでの位置を出力するトラッカーをカバーする
-\item 割り当てられたレイテンシ目標により, 次のフレームが到着する前に全てのフレームが処理されることが保証され, トラッカーが通常の条件下で遅れることがなくなる
-\item しかし, トラッカーチェーンは劣化の順序でも最初である
-\item これは, その出力が「あると便利」であるが, ロボットの正しい動作に不可欠ではないことを反映している
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 全てのレイテンシの目標は, システムインテグレーターに知られている高レベルの機能上の考慮事項とハードウェアプロパティから導き出されることを強調する
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{ベースライン}
-    \begin{itemize}
-        \item ROS-Llama を 2 つのベースラインと比較する 1 つ目は, ROS-Llama インフラストラクチャが存在しない状態で, CFS を使用して 4 つのコア全てでスレッドがグローバルにスケジュールされる標準的な Linux セットアップである
-\item これはデフォルトの ROS セットアップであり, システムインテグレーターとコンポーネント開発者に代わってリアルタイムの専門知識を必要としない唯一の選択肢である
-\item Req に関して公正なベースラインを提供する
-\item (i) (すなわち, ROS-Llama を実行するコストがその利点を上回るかどうかという問題)
-\item これは, ROS-Llama のオーバヘッドが発生しないためである
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 2 つ目は, 応答時間解析を使用しない ROS-Llama のプリミティブバリアントである
-\item 代わりに, SCHED\_RR 固定優先度スケジューラを使用して, レイテンシが重要なエグゼキュータをスケジュールする
-\item これは, 劣化順序に従って優先度を割り当て, 順序の早い段階でのみチェーンにサービスを提供するエグゼキュータよりも, 劣化順序の後のチェーンにサービスを提供するエグゼキュータスレッドを優先することにより, グレースフルデグラデーションを目指している
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item これはおそらく, 分析なしで制御された劣化を実装するための最も簡単なアプローチであるが, 全てのコールバック, チェーン, およびスレッドを正しく識別する必要があるため, 手動で実現するのは面倒でエラーが発生しやすくなる
-\item このベースラインを使用して, 応答時間分析の使用が ROS-Llama の決定をどの程度改善するかを評価する
-\item このベースラインには, SCHED\_DEADLINE ではなく SCHED\_RR を使用する
-\item これは, 分析がなければ, 適切な予約バジェットを割り当てる方法がないためである
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{シナリオ}
-    \begin{itemize}
-        \item ロボットは, ビデオ内の多数のオブジェクトを追跡しながら, 2 つの固定位置の間をパトロールする
-\item 実験は, 無負荷, 通常負荷, 高負荷の 3 つのフェーズに分かれている
-\item 最初のフェーズでは, オブジェクトトラッカーはオブジェクトを追跡しない
-\item 次のフェーズでは, 追跡するオブジェクトの数を増やして, ますます混雑する環境の影響をシミュレートする
-\item これにより, トラッカーの実行時間がほとんど目立たない状態から, ビデオフレームの破棄を余儀なくされる持続不可能な負荷にまで増加する
-\item この需要の増加が他のチェーンに与える影響を観察している
+        \item ロボットは映像中の多数の物体を追いかけながら, 2つの固定された場所の間を巡回する
+        \item 実験は, 無負荷, 通常負荷, 高負荷の3つのフェーズに分けられる
+        \item これにより, 追跡するオブジェクトの数を増加させた場合の, 他のチェーンに与える影響を観察する
     \end{itemize}
 \end{frame}
 
@@ -149,108 +152,96 @@
 \subsection{Evaluation Results: Latency Goal Compliance}
 \label{ssec: evaluation results: latency goal compliance}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        ROS-Llamaがどの程度レイテンシ目標を達成できるかを評価する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{結果}
+    \fitimage{
+        エンドツーエンドレイテンシが設定した目標を超えて観測されたチェーン完了の数
+    }{eval_goal}
+\end{frame}
+
+\begin{frame}{ROS-Llamaの優位性}
     \begin{itemize}
-        \item ROS-Llama がレイテンシの目標を達成するのにどれほど効果的かを評価した
-\item 表 II は, 構成された目標を超えるエンドツーエンドレイテンシで観測されたチェーン完了の数を示している
+        \item トラッカーチェーンは高負荷の場合, 頻繁に目標を超える
+        \item 2つのベースラインでは, トラッカーチェーン以外のチェーンがレイテンシ目標を超過している
+        \item 一方, ROS-Llamaは, より重要なチェーンをトラッカーチェーンによる干渉から守り, システムをデグレードさせることに成功した
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{パイロットチェーンレイテンシの分析}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            \begin{itemize}
+                \item 図はパイロットチェーンで観測されたエンドツーエンドレイテンシのCDFを, フェーズごとに分けて示している
+                \item 曲線のポイントが灰色の線の左側にある場合, 目標は常に満たされている
+            \end{itemize}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \fullimage{pilot_chain}
+        \end{column}
+    \end{columns}
+\end{frame}
+
+\begin{frame}{結果からわかること}
     \begin{itemize}
-        \item トラッカーチェーンは頻繁に境界を超えます (700 回のアクティベーションのうち 208 ～ 238 回)
-\item ROS-Llama の場合, トラッカーチェーンはフレームを完全にスキップすることさえ強制されるため, 実験中に観測されたチェーンインスタンスは 584 のみでした
-\item これは, カメラシミュレーションがフレームを送信するのに十分なプロセッサ時間を受け取っていない期間があることを示している
+        \item 最初のフェーズでは, 3つのアプローチとも, レイテンシ目標に対して少なくとも $25 \mathrm{~ms}$ のマージンを確保する
+        \item 負荷が増加するにつれて, テールが長くなり, 最終的にベースラインはレイテンシ目標を超える
+        \item トラッカーチェーンは, クリティカルなパイロットチェーンとは機能的に全く無関係であるが, トラッカーチェーンの過負荷は, クリティカルチェーンのエンドツーエンドレイテンシに大きな影響を与え, 最も厳しいケースでは $25 \mathrm{~ms}$ 以上増加させる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item このような効果は, 最終段階での持続不可能な負荷の結果として予想される
-\item 制御された劣化により, この過負荷が他のチェーンに影響を与えないようにする必要がある
-\item しかし, 両方のベースラインの下で, 他のチェーン, すなわち CFS と SCHED\_RR の両方の下のパイロットチェーン, さらに SCHED\_RR の下のオドメトリロックチェーンが目標のレイテンシを超えている
-\item 対照的に, ROS-Llama はトラッカーチェーンによる過度の干渉からより重要なチェーンを保護することに成功し, サージに直面してシステムを適切に劣化させます
-    \end{itemize}
+\begin{frame}{CFSにおけるパイロットチェーンレイテンシ増加原因}
+    \begin{block}{原因}
+        CFSのデフォルトのタイムシェアリングポリシーでは, 両方のリソースが等しく使用されるため
+    \end{block}
+    \begin{block}{示唆}
+        それぞれのレイテンシ要件と, ロボットの全体的な正しい動作に対する相対的な重要性を無視しているため, 過負荷状態ではCFSは適切なポリシーとは言えない
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 観察されたゴール違反の理由を理解するために, 影響を受けるチェーンをより詳細に調査した
-\item 図 3 は, パイロットチェーンで観測されたエンドツーエンドレイテンシの CDF を位相別に示している
-\item 垂直の破線はレイテンシの目標を示す曲線の全てのポイントがこの線の左側にある場合 (すなわち, 観察されたエンドツーエンドの最大レイテンシがチェーンのレイテンシの目標を超えない場合), 目標は常に達成される
-    \end{itemize}
+\begin{frame}{SCHED\_RRにおけるパイロットチェーンレイテンシ増加原因}
+    \begin{block}{原因}
+        トラッカーチェーンはリアルタイム優先で過負荷になっているため, DDS層にもバースト的な過負荷を引き起こし, それがパイロットチェーンのチェーン内通信レイテンシに悪影響を与えている
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 最初のフェーズでは, 3 つのアプローチ全てで, レイテンシの目標に対して少なくとも $25 \mathrm{~ms}$ のマージンを確保する
-\item 負荷が増加するにつれて, CFS の曲線はより広くなり, 高レイテンシの結果がより一般的になることを示している
-\item $4 \%$ のアクティベーションのみが最初のフェーズで $80 \mathrm{~ms}$ を超えますが, $10 \%$ は通常の負荷の下で, $16 \%$ は高負荷の下で実行される
-\item テールがどのように長くなり, 最終的にレイテンシの目標を超えているかも明らかである
-    \end{itemize}
+\begin{frame}{SCHED\_RRにおけるodometry-locチェーンレイテンシ増加}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            SCHED\_RRベースラインでは, odometry-locチェーンで深刻なレイテンシスパイクが観測され, 高負荷時のテールレイテンシは無負荷シナリオで観測された最大レイテンシをほぼ $100 \mathrm{~ms}$ も上回った
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \fullimage{odometry_loc_chain}
+        \end{column}
+    \end{columns}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item これらの観察結果は, CFS の一時的な分離の完全な欠如によってもたらされるリスクを示している
-\item 重要でないトラッカーチェーンは機能的に重要なパイロットチェーンとは全く無関係であるが, それでもトラッカーチェーンで発生した過負荷は, 観測されたエンドツーエンドレイテンシに大きな影響を与える
-\item 最も極端なケースでは, クリティカルチェーンを $25 \mathrm{~ms}$ を超えて増加させます
-    \end{itemize}
+\begin{frame}{SCHED\_RRにおけるodometry-locチェーンレイテンシ増加原因}
+    \begin{block}{原因}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item odometry-locチェーンがデグレードオーダーの初期にあり, そのコールバックに対応するエグゼキュータに低いスケジューリング優先度が割り当てられていることが原因となっている
+            \item これは, 緊急度ではなく, クリティカリティモノトニックに優先度を割り当てる場合の典型的な問題[22]
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 根本的な原因は, 両方のチェーンに計算負荷の高いコールバックが含まれているため, 両方がデフォルトの CFS タイムシェアリングポリシーの下で利用可能なリソースを均等に共有する資格があることである
-\item それぞれのレイテンシ要件と, ロボットの全体的な正しい動作に対する相対的な重要性を認識していないため, CFS は 2 つのコンポーネントのどちらを優先すべきかを推測する方法がなく, その結果, 両方のチェーンがレイテンシの目標違反を示す
-\item CFS の根底にあるコア原則であるリソースの公平な共有は, 一時的な過負荷状態では自明に適切なポリシーではない
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 全体として, ここで報告された特定の数字に過度の重きを置かないように注意する必要がある
+%         \item なぜなら, 評価の設定 (実際の物理環境内を自律的に動くロボットで, ノイズの多いセンサ入力に基づいて決定を行う複雑なナビゲーションヒューリスティックスの制御下) は, 実行ごとにかなりの変動を許容するからである (例えば, 表IIの様々なチェーンアクティベーションカウントに示されているように)
+%         \item しかし, このケーススタディでは, 実験を何度も繰り返すうちに, 明確な傾向が見られるようになった
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{}
+\begin{frame}{まとめ}
     \begin{itemize}
-        \item 期待どおり, SCHED\_RR ベースラインは, ほとんどの場合, レイテンシをより安定させます
-\item しかし, パイロットチェーンにはレイテンシの目標を少なくとも $15 \mathrm{~ms}$ 超えたいくつかの大きな外れ値も観察された
-\item これは, 劣化の順序によると, パイロットチェーンが過負荷のトラッカーチェーンよりも自明に高い優先度を持つ必要があることを考えると驚くべきことである (2 つのチェーンはエグゼキュータを共有しない)
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 実際, ここでの影響は微妙であり, 一種の「巻き添え被害」として理解することができる
-\item トラッカーチェーンはリアルタイムの優先度で過負荷になるため, DDS レイヤにもバースト的な過負荷が発生し, DDS レイヤに悪影響を及ぼす
-\item パイロットチェーンのチェーン内通信レイテンシこれは, 適切なデグラデーションが不可欠であることを示している
-\item ROS-Llama は, オーバーロードされたトラッカーチェーンを積極的にベストエフォートモードにデグレードし, DDS の過負荷を暗示的に防ぎます
-\item セクションで DDS の問題を再検討する
-\item VII-A
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 図 4 に示すように, オドメトリ-ロックチェーンの SCHED\_RR ベースラインの下で, さらに深刻なレイテンシスパイクが観測された
-\item 高負荷テールレイテンシは, 無負荷シナリオで観測された最大レイテンシをほぼ $100 \mathrm{~ms}$ 超えている
-\item その理由ここでは, odometry-loc チェーンが劣化順序の早い段階にあるため, そのコールバックを提供するエグゼキュータには低いスケジューリング優先度が割り当てられる
-\item したがって, 劣化順序の後半で発生する緊急度の低いチェーンによって飢餓状態になる危険性がある
-\item これは, 緊急度ではなく臨界単調な方法で優先度を割り当てる場合の典型的な問題である [22]
-\item もちろん, クリティカルに単調な優先度を割り当てないと, (さらに) 予測不可能な劣化動作のリスクが生じるため, 実行可能なアプローチでもない
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 全体として, ここで報告されている特定の数値に過大な重みを割り当てないように注意する必要がある
-\item これは, 評価のセットアップ (ノイズの多いセンサ入力に基づいて決定を下す複雑なナビゲーションヒューリスティックスの制御下にある実際の物理環境を自律的に移動する実際のロボット) として行われる
-\item かなりの量の実行ごとの変動が許容される (例えば, 表 II のさまざまなチェーンアクティベーションカウントによって示されるように)
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item それにもかかわらず, 本論文のケーススタディは, 多くの実験の再実行で観察された明確な傾向を示している
-\item バッキング分析 (SCHED\_RR ベースライン) により, 満足のいく結果が得られる
-\item 対照的に, ROS-Llama は Linux の SCHED\_DEADLINE スケジューラが提供する既存の機能を活用する
-\item システムを動的にプロビジョニングすることにより, イントロスペクションに基づいて, 応答時間分析に導かれます
-\item 特に, システムインテグレータにリアルタイムのスケジューリングの詳細を負担させることはない
+        \item デフォルトのCFS, SCHED\_RRのベースラインは満足できる結果にはつながらない
+        \item ROS-Llamaは, LinuxのSCHED\_DEADLINEスケジューラによって提供される既存の機能を利用し, 応答時間分析によって導かれる動的なシステムプロビジョニングを行い, 特にシステムインテグレータにリアルタイムスケジューリングの詳細を負担させないようにしている
     \end{itemize}
 \end{frame}
 
@@ -258,38 +249,39 @@
 \subsection{Evaluation Results: ROS-Llama Runtime Costs}
 \label{ssec: evaluation results: ros-llama runtime costs}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        ROS-Llamaの実行に関わるコストを調査する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{結果}
+    \fitimage{
+        ROS-Llamaの主要部分の平均的な呼び出しごとのコスト
+    }{overhead}
+\end{frame}
+
+\begin{frame}{結果から分かること}
     \begin{itemize}
-        \item ROS-Llama の実行に伴うコストの調査で評価を締めくくる
-\item ROS-Llama のメモリフットプリントは, ROS のフットプリントに比べて無視できる
-\item したがって, プロセッサ時間に注目する
-\item 表 III は, ROS-Llama の主要部分の呼び出しごとの平均コストを報告している 6 秒ごとにバジェットを再計算するように ROS-Llama を構成したことを思い出してください
-\item したがって, ROS-Llama は全体として 1 つの CPU の 30 $40 \%$ を消費する
+        % \item ROS-LlamaのメモリフットプリントはROSのフットプリントと比較してごくわずかであるため, 我々はプロセッサ時間に注目した
+        \item ROS-Llamaは6秒ごとにバジェットを再計算するように設定されており, 全体としてROS-Llamaは1CPUの30--40\% を消費する
+        \item モデル抽出器は, システムとともに継続的に実行され, ROS-Llamaの総コストの約 $60 \%$ を占める
+        \item 解析のためにタイミングモデルを準備するコストは, オーバヘッドの約 $15 \%$
+        \item 残りの実行時コストは, バジェット選択プロセスによるもので, バジェット編成ヒューリスティック $(\approx 5 \%)$ と応答時間分析 $(\approx 20 \%)$ に分かれている
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{示唆}
     \begin{itemize}
-        \item 最初のフェーズでの分析とバジェット編成のオーバヘッドが低いのは, ROS-Llama が低負荷のシナリオでキャッシュされたバジェット割り当てを日和見的に再利用した結果である
-\item システムと並行して継続的に実行されるモデルエクストラクタは, ROS-Llama の総コストの約 $60 \%$ を占めます
-\item 分析用のタイミングモデルを準備するコストは, 約 $15 \%$ のオーバヘッドを引き起こする
-\item ランタイムコストの残りは, バジェット選択プロセスによるもので, バジェットヒューリスティック $(\approx 5 \%)$ と応答時間分析 $(\approx 20 \%)$ に分けられる
+        \item ROS-Llamaは顕著な実行時オーバヘッドをもたらす
+        \item しかし, ROS-Llamaはレイテンシ目標への適合性が高く, デグレードの挙動も緩やか
+        \item すなわち, ROS-Llamaは大きなコストを伴うが, 性能と予測性の良好なトレードオフを実現するのに十分な利点を提供する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{オーバヘッド改善可能性}
     \begin{itemize}
-        \item 結果は, ROS-Llama が顕著なランタイムオーバヘッドをもたらすことを示している
-\item しかし, ROS-Llama は, CFS ベースラインよりも優れたレイテンシ目標への準拠と, より適切な劣化動作を保証する
-\item すなわち, Req
-\item を満たしている
-\item (i): ROS-Llama にはかなりのコストがかかりますが, パフォーマンスと予測可能性の間の有利なトレードオフを実現するのに十分なメリットがある
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 現在のプロトタイプでは, トレースの実装が最適化されていないため, モデルエクストラクタがほとんどのオーバヘッドを引き起こしている
-\item ROS-Llama を LTTng [23] のような成熟したトレースシステムと統合すると, ROS-Llama の実行コストが削減される可能性がある
+        \item 現在のプロトタイプでは, 最適化されていないトレース実装のため, モデル抽出器がほとんどのオーバヘッドを発生させている
+        \item ROS-LlamaをLTTng [23]のような成熟したトレースシステムと統合することで, ROS-Llamaの実行コストを下げることができると考えられる
     \end{itemize}
 \end{frame}
