--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/open_problems_and_pragmatic_workarounds.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/open_problems_and_pragmatic_workarounds.tex
@@ -1,80 +1,90 @@
 % !TeX root = main.tex
 
-\section{Open Problems and Pragmatic WORkarounds}
+\section{OPEN PROBLEMS AND PRAGMATIC WORKAROUNDS}
 \label{sec: open problems and pragmatic workarounds}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS-Llama を開発しているうちに, 将来の作業の多くの機会と, 最初は明らかではなかった ROS と Linux の制限に気付きた
+        \item ROS-Llamaを開発する中で, 本論文は, 今後の研究のための多くの機会や, 当初は明らかではなかったROSやLinuxの制限に気づくことができた
     \end{itemize}
 \end{frame}
 
 
 \subsection{Open Analysis Problems}
-\label{ssec: Open Analysis Problems}
+\label{ssec: open analysis problems}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS-Llama は, いくつかの方向に沿って支えられている分析プラットフォームの改善から恩恵を受ける立場にある
+        \item ROS-Llamaは, そのプラットフォームである解析プラットフォームをいくつかの方向から改善することで恩恵を受けることができる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{複雑なアクティベーション}
-    \begin{itemize}
-        \item メッセージの公開時に無条件にアクティベートされるレギュラーコールバックに加えて, ROS はメッセージフィルターの形で高度なアクティベーションセマンティクスも提供する
-\item 特に興味深いのは, ナビゲーションスタックで使用される TF 関連のメッセージフィルターである
-\item 概念的には, フィルターは複数の受信データ項目を (個別のメッセージから) 選択して結合し, 複雑なルールに基づいてダウンストリームの共同処理用の 1 つのメッセージにする
-\item 表現力に関しては, 古典的な「and」アクティベーションセマンティクスをはるかに超えており, 実際には, 結合されるメッセージの内容にも依存する場合がある
-    \end{itemize}
-\end{frame}
+
+\subsubsection{Complex activations}
+\label{sssec: complex activations}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 例えば, ナビゲーションスタックでは, ローカリゼーションコンポーネントはメッセージフィルターを使用して, レーザースキャナーのコールバックが 1 回だけトリガされ, 最新の利用可能なレーザースキャンサンプルよりも古いオドメトリ測定値が利用可能であることを保証する
-\item このような複雑なアクティベーションセマンティクスは, 現在のモデリングアプローチでは表現できない
-\item 本論文のケーススタディでは, メッセージフィルターの前後の部分を別々のチェーン (すなわち, レーザースキャナー, オドメトリ loc, およびローカリゼーションチェーン) として宣言し, 前にチェーン間でレイテンシ目標を手動で分散することによって, この問題を回避した
-\item そしてメッセージフィルターの後より表現力豊かなモデルを使用すると, このような手動の構成調整を回避でき, ROS-Llama の使いやすさと効率の両方にメリットがある
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{確率論が必要な場合}
-    \begin{itemize}
-        \item セクションで説明したように
-\item V では, (スカラー WCET モデルではなく) 実行時間曲線を使用することが, 有用な分析精度を得るために不可欠である
-\item それにもかかわらず, 本論文の実験では, 観測されたレイテンシと予測された境界の間に大きなギャップがあることにまだ気づいていた
+        \item メッセージの公開時に無条件にアクティブになるレギュラーコールバックに加えて, ROSはメッセージフィルタの形で高度なアクティベーションセマンティクスも提供する
+        \item 特に興味深いのは, ナビゲーションスタックで使用されるTF関連のメッセージフィルターである
+        \item 概念的には, フィルターは, 複雑なルールに基づいて共同でダウンストリーム処理を行うために,  (別々のメッセージから) 複数の受信データ項目を選択し, 単一のメッセージにまとめる
+        \item 表現力の面では, 古典的な「と」起動のセマンティクスをはるかに超え, 実際, 結合されるメッセージの内容にも依存することがある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item その理由は明らかである
-\item 実行時間曲線は, それほど悲観的ではないが, 依然として最悪のケースの需要のモデルであるが, 実際には, ROS システムが一貫して最悪のケースの動作を示す可能性は非常に低いである
-\item したがって, 概念的には, 確率的タイミング分析は ROS システムにはるかに適している可能性がある
-\item ROS システムは, ほぼ常にコモディティプラットフォームに展開されており, 静的な WCET 分析には適していない
+        \item 例えば, ナビゲーションスタックでは, ローカリゼーションコンポーネントがメッセージフィルターを使用して, レーザースキャナーコールバックが, 最新のレーザースキャンサンプルより古くないオドメトリ測定値が利用できる場合にのみトリガされることを保証する
+        \item このような複雑なアクティベーションセマンティクスは, 現在のモデリングアプローチでは表現できない
+        \item 我々のケーススタディでは, メッセージフィルタの前後の部分を別々のチェーン (すなわち, レーザースキャナ, オドメトリロク, ローカリゼーションチェーン) として宣言し, メッセージフィルタの前後のチェーン間でレイテンシ目標を手動で分散させることによってこの問題を回避している
+        \item より表現力の高いモデルを用いれば, このような手動による設定調整は不要となり, ROS-Llamaの使いやすさと効率性の双方に貢献できる
+    \end{itemize}
+\end{frame}
+
+
+\subsubsection{In want of stochasticity}
+\label{sssec: in want of stochasticity}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item 第V章で述べたように, 有用な解析精度を得るためには, スカラーWCETモデルではなく, 実行時間曲線の使用が不可欠である
+        \item それにもかかわらず, 我々の実験では, 観測されたレイテンシと予測された境界の間に大きなギャップがあることに気づくことがあった
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 適切な例として, ROS-Llama がとにかく動的な内省ベースのアプローチに従うことを考えると, 追跡された「確率論的最悪の-ケース実行時間曲線」 $p W C E T(n)$ は, 最近注目されている確率的 WCET 概念 [24-30] に類似している
-\item ROS システムとその動的環境に内在する不確実性を考えると, この方向性には多くの見込みがあると考えている
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{DDS}
-    \begin{itemize}
-        \item DDS ミドルウェアは, 全ての通信が DDS を通過する必要があるため, ROS コンポーネント間の伝送レイテンシに大きな影響を与える
-\item このレイテンシを調整するために, DDS には多数の QoS オプションが用意されている 1 つの実装のドキュメント [31] には, 特に, 作成されたスレッドの数, 複数の DDS サポートスレッドのスケジューリングの優先度, またはメッセージ送信順序に影響を与える 53 個のパラメータだけがリストされている
-\item 実装に依存しない QoS オプションの分析に関する以前の作業 [32, 33] があるが, DDS スレッドのスケジューリングは, DDS 標準によって「実装定義」として意図的に取り除かれ, 今日までほとんど理解されていない
-\item 本論文の知る限りでは, スケジューリングの決定が DDS レイテンシに与える影響を予測する原則的な方法は今のところない
+        \item 理由は明白で, 実行時間曲線は, 悲観的ではないものの, 依然として最悪の要求のモデルであり, 実際には, ROSシステムは一貫して最悪の動作を示すことは極めてまれである
+        \item 概念的には, 確率的タイミング解析は, 事実上常にコモディティプラットフォームに展開され, 静的WCET解析に従わないROSシステムにはるかによくマッチする可能性がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item そのため, 本論文では, DDS インフラストラクチャをブラックボックスとして扱い, 全ての DDS スレッドを個別のシステムコアに分離し, スケジューリングの優先度を高くすることで, レイテンシの影響を軽減した
-\item さらに, 応答時間分析で DDS メッセージ伝搬レイテンシを省略した (無視できないことはほぼ間違いないが)
-\item DDS レイテンシに対するスレッドスケジューリングの影響を自明にする今後の作業により, ROS-Llama は適切な DDS QoS オプションを自動的に選択し, 最悪伝搬レイテンシを予測して説明できるようになる可能性がある
+        \item 例えば, 最近の注目の的である確率論的WCETの概念に類似した, 追跡された「確率論的最悪実行時間曲線」 $p W C E T(n)$ の概念に根ざした仮想的な分析で, より厳しい最悪応答時間といくつかの分析の確実性を喜んで交換する[24-30]
+        \item ROSシステムとその動的環境における固有の不確実性を考慮すると, この方向性には大きな期待が持てると考えている
+    \end{itemize}
+\end{frame}
+
+
+\subsubsection{DDS}
+\label{sssec: dds}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item DDSミドルウェアは, 全ての通信がそれを通過する必要があるため, ROSコンポーネント間の伝送レイテンシに大きく影響する
+        \item このレイテンシを調整するために, DDS は多数の QoS オプションを提供している
+        \item ある実装のドキュメント [31] には, 特に, 作成されるスレッドの数, 複数の DDS サポートスレッドのスケジューリング優先度, またはメッセージ送信順序に影響する 53 のパラメータだけがリストアップされている
+        \item 実装に依存しないQoSオプションの分析に関する先行研究がある一方で [32, 33], DDSスレッドのスケジューリングは, DDS標準によって意図的に「実装定義」として残され, 今日までほとんど理解されていないままとなっている
+        \item 本論文の知る限り, スケジューリングの決定がDDSのレイテンシに与える影響を予測する原理的な方法は, 今のところない
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item そこで, 本論文では, DDSインフラストラクチャをブラックボックスとして扱い, 全てのDDSスレッドを高いスケジューリング優先度で別のシステムコアに分離することで, そのレイテンシの影響を低減した
+        \item さらに, 応答時間の分析では, DDSメッセージの伝搬レイテンシを無視した (無視できないほどのレイテンシであることは間違いないのであるが)
+        \item 今後, スレッドスケジューリングがDDSのレイテンシに与える影響を自明にすることで, ROS-Llamaが自動的に適切なDDS QoSオプションを選択し, 最悪伝搬レイテンシを予測し考慮することが可能になるかもしれない
     \end{itemize}
 \end{frame}
 
@@ -84,76 +94,53 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS-Llama は, Linux のリアルタイム機能, 特に SCHED\_DEADLINE [8] から大きな恩恵を受けている
-\item とはいえ, いくつかの問題は驚くべき課題ももたらした
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{高レイテンシ I/O}
-    \begin{itemize}
-        \item 本論文の実験では, レーザースキャナーとオドメトリデータが, 過度のレイテンシの後でしか Turtlebot ドライバースレッドに到達しないことがあることが分かった
-\item USB シリアルポートに到着するデータは, リアルタイムプロセスによって簡単に枯渇する CFS スケジュールカーネルスレッド (PREEMPT\_RT カーネル内であっても) を含む TTY レイヤを通過することが判明した
-\item Linux の「バインドされていない kworker スレッド」をシステムプロセッサに強制することで, 最終的にこの問題を回避することができたが, これは, リアルタイム I/O が見過ごされ, 十分に研究されていない問題のままであることを思い出させてくれます
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{スケジューラの逆転}
-    \begin{itemize}
-        \item SCHED\_DEADLINE スレッドは常に SCHED\_FIFO および SCHED\_RR スレッドよりも優先される
-\item これにより, 分析が簡素化されるが, 多くの実際的な問題も発生する
-\item 割り当てられた予約帯域幅によってこのレイテンシはある程度制限されるが, それでもかなりのレイテンシになる可能性がある (すなわち, EDF ビジーウィンドウの最大長)
-\item 多くのシステムクリティカルなカーネルスレッド (ディスクドライバなど) が SCHED\_FIFO または SCHED\_RR 優先度でスケジュールされているため, この設計は特に残念である
-\item したがって, 予約に「多すぎる」帯域幅を割り当てると, 重要なカーネルスレッドが不足し, 実際にカーネルパニックが発生する可能性がある
-\item 原則的な解決策は, SCHED\_DEADLINE スケジュールで SCHED\_FIFO, SCHED\_RR, および CFS のプロセッサ時間を明示的に予約する「スケジューリングクラス予約」を導入することである
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{スレッドと予約}
-    \begin{itemize}
-        \item SCHED\_DEADLINE は予約パラメーターを個々のスレッドに関連付ける
-\item したがって, 複数のスレッド間でバジェットを共有することはできず, スレッド間で作業を動的に分散するマルチスレッドアプリケーション (事実上全ての DDS ミドルウェアなど) に予約を適用するのは非常に非効率的である
-\item boost::asio や $\mathrm{C}++$ std::async API などの非同期プログラミング用の一般的なライブラリもプロビジョニングできない
-\item 複数のクライアントスレッドをサポートするファーストクラスの予約があれば安心である
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{必要なソフト予約}
-    \begin{itemize}
-        \item 現在, メインライン Linux はハード予約のみをサポートしている
-\item ハード予約は, 次の補充時間までプロセッササービスから予約のバジェットを使い果たしたスレッドを無条件に遮断する [34]
-\item このレート制限動作は非常に問題になる可能性がある必要なバジェットをわずかでも過小評価すると, レイテンシが大幅に増加する
-\item これは, スレッドの低次元のバジェットが使い果たされると, CFS の場合に完了できたとしても待機する必要があるためである
-\item 糸対照的に, ソフトリザーブ [34] では, プロビジョニング不足のスレッドが少なくともいくらかの保証された帯域幅を受け取り, ベストエフォートベースで進行することが可能になる
-\item これにより, ROS-Llama は劣化したチェーンを部分的にプロビジョニングできるようになる
+        \item ROS-Llamaは, Linuxのリアルタイム機能, 特にSCHED\_DEADLINE [8]から大きな恩恵を受けている
+        \item それにもかかわらず, ある種の問題は意外なほど困難でもありました
     \end{itemize}
 \end{frame}
 
 
-\subsection{ROS Idiosyncrasies}
-\label{ssec: ros idiosyncrasies}
+\subsection{High-latency I/O}
+\label{ssec: high-latency i/o}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS-Llama は既存の ROS エコシステムに可能な限り対応しようとするが, 干渉がなくても管理対象の ROS コンポーネントが既にレイテンシスパイクの影響を受けやすい場合, 奇跡を起こすことはできない
-\item 適切な例として, TF システムをもう一度考えてみよう
-\item TF システムは, すぐに処理できないメッセージを内部的にキューに入れます
-\item このようなキューに入れられたメッセージは全て, 新しい翻訳が TF トピックに表示されると再検討される
-\item すなわち, 単一の /tf コールバックインスタンスがメッセージの大量のバックログを一気に処理する可能性があるため, 他のコールバックでレイテンシスパイクが必然的に発生する
-\item 同じ遺言執行者による
+        \item 本論文の実験では, レーザースキャナーとオドメトリのデータが過度のレイテンシを経てからTurtlebotのドライバースレッドに到着することがありました
+        \item これは, USB シリアルポートに到着したデータが TTY レイヤを通過するためで, CFS スケジューリングされたカーネルスレッド (PREEMPT-RT カーネルであっても) はリアルタイムプロセスによって簡単に停止させられてしまうことがわかり ました
+        \item 最終的には, Linuxの "unbound kworker threads "をシステムプロセッサに強制することでこの問題を回避することができたが, これは, リアルタイムI/Oが依然として頻繁に見落とされ, 研究されていない問題であることを思い出させるものとなっている
+    \end{itemize}
+\end{frame}
+
+
+\subsection{Scheduler inversion}
+\label{ssec: scheduler inversion}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item SCHED\_DEADLINEスレッドは常にSCHED-FIFOおよびSCHED\_RRスレッドより優先される
+        \item これは解析を単純化するが, 多くの実用的な問題を引き起こする
+        \item 割り当てられた予約帯域幅によってこのレイテンシはいくらか制限されるが, それでもかなりのレイテンシ (すなわち, EDFの最大ビジーウィンドウ長) になる可能性がある
+        \item 多くのシステムクリティカルなカーネルスレッド (ディスクドライバなど) は, SCHED-FIFOまたはSCHED\_RRの優先度でスケジュールされているので, この設計は特に残念なことである
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item もう 1 つの注目すべき実装の選択肢は, ナビゲーションスタックのドメイン固有言語である
-\item 具体的には, ナビゲーターの戦略は, $10 \mathrm{~ms}$ ごとにトリガされるタイマコールバックに組み込まれた C ベースのインタープリターによってポーリング方式で意図された動作の変更についてクエリされる XML 動作ツリーを使用して記述される
-\item このような構造は, システムの真の通信構造とタイミング動作を難読化し, モデル抽出者の作業を妨げます
-\item ケーススタディでは, 通常のメッセージによってトリガされる $\mathrm{C}++$ コールバックとしてビヘイビアツリーを書き直すことで, この問題を解決した
+        \item 予約に「過剰な」帯域幅を割り当てると, 重要なカーネルスレッドが飢餓状態になり, 実際にカーネルパニックに陥る可能性がある
+        \item 原理的な解決策は, SCHED\_DEADLINEスケジュールにおいて, SCHED-FIFO, SCHED\_RR, およびCFS用のプロセッサ時間を明示的に予約する「スケジューリングクラスリザベーション」を導入することかもしれない
     \end{itemize}
 \end{frame}
 
+
+
+\subsection{Threads vsreservations}
+\label{ssec: threads vs reservations}
+
 \begin{frame}{}
     \begin{itemize}
-        \item 全体として, ROS-Llama は, ロボティクスの自動レイテンシ管理が実用的であり, 大きな可能性を秘めていることを示しているが, これらの発見は, 開発者が可能な限り原則的で慣用的なソリューションを好まない場合, 現実的に達成できる自動化の程度には限界があることも示している
+        \item SCHED\_DEADLINEは, 予約パラメータを個々のスレッドに結びつけます
+        \item そのため, 複数のスレッド間でバジェットを共有することができず, スレッド間で動的に作業を分配するマルチスレッドアプリケーション (例えば, 事実上全てのDDSミドルウェア) に予約を適用することは非常に非効率的である
+        \item boost::asioや $\mathrm{C}++$ std::async APIなどの非同期プログラミング用の一般的なライブラリも提供することができない
+        \item 複数のクライアントのスレッドをサポートするファーストクラスの予約は, 救済される
     \end{itemize}
 \end{frame}
