--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
@@ -50,7 +50,7 @@
     \begin{frame}{}
         \begin{itemize}
             \item パーティショニングスケジューリングでは, DAGタスクの各頂点が静的にプロセッサに割り当てられ, 各プロセッサのワークロードは自己中断を伴うリアルタイムタスクとしてモデル化され, 分析される[10], [20]
-            \item フェデレートスケジューリングでは, 各タスクは専用のプロセッサ群を割り当てられ, 実行時にその上で排他的に実行される.フェデレートスケジューリングはLi.et.al.によって最初に提案され[1], 暗黙のデッドラインを持つタスクに対して, （容量拡張境界の観点から）最高の定量的最悪性能保証を提供するものであった.その後, フェデレートスケジューリングは制約付き締切タスク[35], 任意締切タスク[36], さらに条件分岐を持つDAG[37]へと一般化された.フェデレートスケジューリングは, タスク間で一定の資源共有を可能にするいくつかのバリエーションに拡張される.セミフェデレートスケジューリングアプローチ[4]は, 異なる重いタスクが1つまたは2つのプロセッサを他のタスクと共有することを可能にします.予約ベースの連合型アプローチ[5]は, 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクをディスパッチさせるものである.セクションIで述べたように, [4]と[5]はともにフェデレートスケジューリングの資源浪費の問題を限定的にしか解決していない.
+            \item フェデレートスケジューリングでは, 各タスクは専用のプロセッサ群を割り当てられ, 実行時にその上で排他的に実行される.フェデレートスケジューリングはLi.et.al.によって最初に提案され[1], 暗黙のデッドラインを持つタスクに対して,  (容量拡張境界の観点から) 最高の定量的最悪性能保証を提供するものであった.その後, フェデレートスケジューリングは制約付き締切タスク[35], 任意締切タスク[36], さらに条件分岐を持つDAG[37]へと一般化された.フェデレートスケジューリングは, タスク間で一定の資源共有を可能にするいくつかのバリエーションに拡張される.セミフェデレートスケジューリングアプローチ[4]は, 異なる重いタスクが1つまたは2つのプロセッサを他のタスクと共有することを可能にします.予約ベースの連合型アプローチ[5]は, 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクをディスパッチさせるものである.セクションIで述べたように, [4]と[5]はともにフェデレートスケジューリングの資源浪費の問題を限定的にしか解決していない.
         \end{itemize}
     \end{frame}
 
