--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_both.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_both.tex
@@ -45,7 +45,7 @@
 \forme{
     \begin{frame}{}
         \begin{itemize}
-            \item 最後に, Theorem1, 2, 3のスケジューラビリティテスト条件は, CiとLiに関して持続可能であることを指摘したい.すなわち, あるジョブのCiと／またはLiが小さくなっても（またはあるジョブが実行時に最悪のCiと／またはLiまで実行しなくても）これらのTheoremの条件は, タスクのスケジューラビリティを保証するために有効であるということである.一般にDAGタスクのスケジューリングはタイミング異常, すなわちタスクが最悪負荷まで実行されたときに実際の最悪応答時間が発生するとは限らないが, Theorem1, 2, 3の持続的スケジューラビリティ試験条件を用いる場合はタイミング異常を気にする必要はない.
+            \item 最後に, Theorem1, 2, 3のスケジューラビリティテスト条件は, CiとLiに関して持続可能であることを指摘したい.すなわち, あるジョブのCiと／またはLiが小さくなっても (またはあるジョブが実行時に最悪のCiと／またはLiまで実行しなくても) これらのTheoremの条件は, タスクのスケジューラビリティを保証するために有効であるということである.一般にDAGタスクのスケジューリングはタイミング異常, すなわちタスクが最悪負荷まで実行されたときに実際の最悪応答時間が発生するとは限らないが, Theorem1, 2, 3の持続的スケジューラビリティ試験条件を用いる場合はタイミング異常を気にする必要はない.
         \end{itemize}
     \end{frame}
 }
