--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
@@ -133,7 +133,7 @@
 %     \begin{itemize}
 %         \item Lemmaを矛盾によって証明する
 %         \item $c_{i}$ が $t$ でブロックされておらず, $t \in\left[r_{i}, s_{i}\right)$ で $t$ でアイドル状態のスレッドがあるとする
-%         \item この場合, $t$ において $\Omega$ に他の適格なコールバックインスタンスが存在してはならない（さもなければ, アイドルスレッドにスケジューリングされる）
+%         \item この場合, $t$ において $\Omega$ に他の適格なコールバックインスタンスが存在してはならない (さもなければ, アイドルスレッドにスケジューリングされる) 
 %     \end{itemize}
 
 %     \repost{mutually exclusive コールバックグループに属す $\Omega$ 内のコールバックインスタンス $c_{i, j}$ は, $c_{i, j}$ と同じコールバックグループ内のコールバックのインスタンスが実行されていない場合に適格であり, それ以外の場合は R-blocked される}
