--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/introduction.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/introduction.tex
@@ -5,149 +5,144 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ロボット工学など, さまざまな研究分野で深い専門知識を必要とする複雑で学際的なアプリケーションドメインでは, 全てまたはほとんどのソフトウェアをゼロから作成することは通常, 選択肢ではない
-        \item その代わりに, ロボット工学者は, ROSのような一般的なロボット工学フレームワークで容易に利用でき, 標準機能を提供する既存のサードパーティコンポーネントの統合を採用するのが一般的である
-        \item 利点は数多くあり, 簡単に確認できる
-        \item 例えば, 複数の最先端の経路計画アルゴリズムと 3-D 視覚化サポートを備えた完全なナビゲーションスタックが 1 回ダウンロードするだけで済むのに, 新しいナビゲーションサブシステムを苦労して開発する必要はない
+        \item ロボット工学のような, 様々な分野の深い専門知識を必要とする学際的で複雑なアプリケーション領域では, 通常, 全ての, あるいはほとんどのソフトウェアをゼロから書くという選択肢はあり得ない
+        \item その代わりに, ロボット工学者は, ROSのような一般的なロボット工学フレームワークで容易に利用できる, 標準機能を提供する既存のサードパーティコンポーネントの統合を採用するのが一般的である
+        \item その利点は数多く, 簡単に理解できる
+        \item 例えば, 複数の最新経路計画アルゴリズムと3D可視化サポートを備えた完全なナビゲーションスタックがたった1回のダウンロードで手に入るなら, なぜ新しいナビゲーションサブシステムを苦労して開発する必要があるか？
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 完全なロボティクスシステムを構築するには, 相互作用する多くのコンポーネントを統合する必要がある
-        \item ROS 開発プロセスの分散型オープンソースの性質により, これらのコンポーネントは通常, 必ずしもお互いを知っているわけではなく, 複数の独立したコンポーネント開発者によって個別に開発される
-        \item 同様に, アプリケーションおよびミッション固有のロジックと「グルーコード」を使用して展開プラットフォーム上で選択されたコンポーネントを構成するシステムインテグレーターは, 通常, それぞれのコンポーネント開発者と緊密に連携しない
+        \item 完全なロボットシステムを構築するためには, 多くの相互作用するコンポーネントを統合する必要がある
+        \item ROS開発プロセスの分散型オープンソースの性質により, これらのコンポーネントは通常, 必ずしもお互いを知らない複数の独立したコンポーネント開発者によって分離して開発される
+        \item 同様に, システムインテグレータは, アプリケーションおよびミッション固有のロジックと「グルーコード」で展開プラットフォーム上で選択したコンポーネントを構成するが, 通常, それぞれのコンポーネント開発者と密接に連携することはない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item コンポーネントの統合を可能な限りシンプルに保つために, ROS は従来のトピックベースのpublish/subscribe パラダイムを採用して, コンポーネントの疎結合を可能にする
-        \item 概念的には, 各コンポーネントは, 特定のトピックにsubscribeする多数のコールバックを含む「ブラックボックス」として理解できる
-        \item 特定のトピックに関連するメッセージがpublishされるたびに, 全てのsubscribe コールバックが呼び出され, 何らかの計算が実行される
-        \item その後, 後続のメッセージが他のトピックにpublishされる可能性がある
-        \item これにより, さらにコールバックがトリガされる
+        \item コンポーネントの統合を可能な限りシンプルに保つために, ROSはコンポーネントの疎結合を可能にする古典的なトピックベースのpublish/subscribeパラダイムを採用している
+        \item 概念的には, 各コンポーネントは, 特定のトピックをsubscribeする多数のコールバックを含む「ブラックボックス」として理解できる
+        \item 与えられたトピックに関連するメッセージがpublishされるたびに, 全てのsubscribeコールバックが呼び出され, 何らかの計算を実行し, 次に他のトピックに後続のメッセージをpublishすることができ, これがさらにコールバックをトリガするというように, 繰り返す
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item インテグレータは, あるコンポーネントの「入力コールバック」を別のコンポーネントの「出力トピック」に接続することによってコンポーネントを構成する
-        \item このように, ROS システムは, 相互接続されたトピックとコールバックの複雑なネットワークを形成する
-        \item そこでは, データ (環境刺激など) がcause-effectチェーンに沿ってネットワークを介してイベント駆動型の方法で伝播し, インテグレーターが必要とするコンポーネントの境界を透過的に横断する
-    \end{itemize}
-\end{frame}
-
-
-\begin{frame}{}
-    \begin{itemize}
-        \item このようなcause-effectチェーンの典型的な例は, 経路上の障害物を検出して反応する必要がある移動ロボットのセンシング-計算-作動パイプラインである
-        \item 例えば, ハードウェアドライバコンポーネントがレーザースキャナから新しいサンプルを取得し（cause）, それが複数のマッピング, 座標変換, 経路計画, 車輪制御コンポーネントを経て, 最終的に車輪速度の変化（effect）につながる場合があります
-        \item 自明に, このようなデータ処理チェーンに沿ったcauseからeffectまでの最大レイテンシは, ロボットが正しく機能するために重要な役割を果たし, 多くの場合, 安全性を考慮する上でも重要である
+        \item ROSシステムは, このように相互接続されたトピックとコールバックの複雑なネットワークを形成し, データ (環境刺激など) は, イベント駆動型の方法でネットワークを通じてcause-effectチェーンに沿って伝播し, インテグレータが望むように透過的にコンポーネント境界を交差させることができる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 重要なのは, システムインテグレーターに可能な限り多くの展開の選択肢を残して, コンポーネントの再利用の機会を最大化するために, ROS の実行管理レイヤとその下にあるオペレーティングシステムがコンポーネント開発者に意図的に公開されていないことである
-        \item むしろ, ROSの中心的なコールバック抽象化は, コールバック手続きがいつどのようにスケジュールされるか, コールバックの実行がスレッドまたはプロセスにわたってどのように組織されるか, またはネットワーキング層がメッセージの送信と受信をどのように処理するかを全く意識せずに, 実行から完了までセマンティクスを持つ単なる手続きである
+        \item このようなcause-effectチェーンの典型的な例として, 進路上の障害物を検知して反応する必要のある移動ロボットのセンシング-計算-行動パイプラインが挙げられる
+        \item 例えば, ハードウェアドライバコンポーネントがレーザースキャナから新しいサンプルを取得し (cause) , それが複数のマッピング, 座標変換, 経路計画, 車輪制御コンポーネントを経て, 最終的に車輪速度の変化 (effect) をもたらす可能性がある
+        \item このようなデータ処理のチェーンにおいて, causeからeffectまでの最大レイテンシ時間は, ロボットが正しく機能するために重要な役割を果たすことは明らかであり, また, 安全性を考慮する上でも重要であることが多い
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS はオープンソースソフトウェアであるため, 原則として, システムの実行と通信動作を完全に理解し, 制御することが可能である
-        \item したがって, リアルタイムの専門家の観点からは, リアルタイムシステム研究からのよく知られた手法で ROS を強化することは, 論理的なステップのように思えるかもしれない
-        \item しかし, これを一見より難しくしているハードルがいくつかある
+        \item 重要なのは, システムインテグレータにできるだけ多くの展開の選択肢を残し, コンポーネントの再利用の機会を最大化するために, ROSの実行管理層と基礎となるオペレーティングシステムは, 意図的にコンポーネント開発者に公開されないことである
+        \item むしろ, ROSの中心的なコールバック抽象化は, コールバック手続きがいつどのようにスケジュールされるか, コールバックの実行がスレッドまたはプロセスにわたってどのように組織されるか, またはネットワーキング層がメッセージの送受信をどのように処理するかを全く意識せずに, 実行から完了までセマンティクスを持つ単なる手続きである
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item まず第一に, インテグレーターは必要な情報を欠いている
-        \item ほとんどのリアルタイム分析では, 同時実行タスクの数, それらのアクティベーションセマンティクスと機能的相互作用, メッセージの到着パターン, 最悪実行時間など, 多くの低レベルシステムの詳細に関する深い知識が前提となる
-        \item ROSコンポーネントは, この種の情報を提供するマニフェストと一緒に来ることはありません
-        \item さらに悪いことに, リアルタイム解析は, 欠陥のある情報や不完全な情報にはうまく対応できない
-        \item モデリング目的でサードパーティコンポーネントを手動でリバースエンジニアリングする際の 1 つの間違いや見落としが, 全体の作業を無効にする可能性がある
+        \item ROSはオープンソースソフトウェアであるため, 原理的にはシステムの実行と通信の挙動を完全に理解し制御することが可能である
+        \item このため, リアルタイムシステムの専門家から見れば, ROSにリアルタイムシステム研究でよく知られた技術を導入することは論理的なステップであるように思える可能性がある
+        \item しかし, 一見したところ, これを難しくしているハードルがいくつかある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 第 2 に, 必要なシステムの詳細をコンポーネントレベルで静的に決定して記述することはできない
-        \item その理由の 1 つは, 多くのロボティクスアルゴリズムが, ユースケースやプラットフォーム固有の側面に応じて, 実行時間とアクティベーションパターンが大きく異なることである
-        \item 例えば, ビデオストリーム内のオブジェクトを識別し, その軌跡 (隣接車線の車など) を推測する汎用オブジェクトトラッキングコンポーネントを考えてみよう
-        \item この機能の実行時間は, ビデオストリームのフレームレート, 解像度, コーデック, および特定の追跡アルゴリズムに関連するその他のさまざまなパラメーターなど, さまざまなパラメーターによって異なる
+        \item まず第一に, インテグレータに必要な情報が不足している
+        \item ほとんどのリアルタイム分析では, 同時実行タスクの数, それらの起動セマンティクスや機能的相互作用, メッセージの到着パターン, 最悪実行時間など, 多くの低レベルシステムの詳細に関する深い知識が前提となっている
+        \item ROSコンポーネントは, この種の情報を提供するマニフェストと一緒に来ることはない
+        \item さらに悪いことに, リアルタイム解析は, 欠陥のある情報や不完全な情報にうまく対処できない
+        \item モデリング目的でサードパーティコンポーネントを手作業でリバースエンジニアリングしているときに, たった一つのミスや見落としがあれば, その取り組み全体を無条件に無効にしてしまうことになりかねない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item これらのパラメータは, 汎用オブジェクトトラッキングコンポーネントの開発者が事前に把握したり修正したりすることはできない
-        \item このようなユースケース固有の情報は, 特定のロボットを構築するインテグレーターのみが知っている
-        \item インテグレーターは, オブジェクトトラッキングやリアルタイムシステムの専門家である必要はなく, 特定の構成の選択の影響を常に予測できるわけではない
-        \item したがって, コンポーネントのリソース要求とリアルタイム動作は, 特定の展開での使用のコンテキストで常に評価する必要がある
-        \item これは, ROS フレームワークの人気の根底にある「ブラックボックス」コンポーネントのモジュール式再利用とは互換性がない
+        \item 第二に, 必要なシステムの詳細をコンポーネントレベルで静的に決定し, 記述することができない
+        \item その理由のひとつは, 多くのロボット工学アルゴリズムが, ユースケースやプラットフォーム固有の側面に依存し, 実行時間や起動パターンが大きく変化するためである
+        \item 例えば, ビデオストリーム中の物体を識別し, その軌跡を推測する一般的な物体追跡コンポーネントを考えてみよう (例えば, 隣の車線の車など)
+        \item この機能の実行時間は, ビデオストリームのフレームレート, 解像度, コーデック, および特定のトラッキングアルゴリズムに関連する他の様々なパラメータを含む, 様々なパラメータに依存する
+        \item これらのパラメータは, 一般的なオブジェクトトラッキングコンポーネントの開発者が前もって知っていたり, 固定されていたりするものではない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 最後になったが, インテグレーターが各コンポーネントについてそれぞれの専門家と話し合い, タイミング分析に必要な全ての詳細をどうにかして取得したとしても, 第 3 の基本的な問題が残る
-        \item 多くのコンポーネントのリソース要件とパフォーマンス特性は, 本質的にロボットのパフォーマンスに依存する
-        \item 動的な環境であるため, 時間の経過とともに変化し, 静的 (最悪の場合) のリソースプロビジョニングは実行不可能になる
+        \item このようなユースケース特有の情報は, 特定のロボットを構築するインテグレーターにしか分からない
+        \item インテグレーターは, 必ずしもオブジェクトトラッキングやリアルタイムシステムの専門家ではないため, 特定の構成を選択した場合の影響を常に予測できるわけではない
+        \item したがって, コンポーネントのリソース要求とリアルタイム動作は, 常に特定の展開で使用するという文脈で評価されなければならない
+        \item これは, ROSフレームワークの人気の根底にある「ブラックボックス」コンポーネントのモジュール式再利用と相容れるものではない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 例えば, 前述のオブジェクトトラッキングコンポーネントをもう一度考えてみよう
-        \item ロボットがランドマークベースの自己位置特定コンポーネントにも依存しているとする
-        \item 一方では, オブジェクトトラッカーは, 人口のまばらな田舎を移動する場合よりも, にぎやかな都市を移動する場合にはるかに多くのプロセッサ時間を必要とする
-        \item 一方, 自己位置特定は, ほぼ均一な風景よりも, 認識可能なランドマークが多数ある都市の方がはるかに簡単である
-        \item 両方の状況で十分なリソースを保証するために, システムインテグレータは, 不毛の田園地帯からなる賑やかな都市にシステムを用意する必要がある
+        \item 最後に, 仮にインテグレータが各コンポーネントについてそれぞれの専門家と議論し, タイミング解析に必要な全ての詳細を入手できたとしても, 第三の根本的な問題が残る
+        \item 多くのコンポーネントのリソース要件と性能特性は, 本質的にロボットの動的環境に依存し, したがって時間とともに変化するため, 静的 (最悪のケース) リソース配置は実行不可能なのである
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ロボット工学では, このような悲観的なシステムの寸法設定は, すぐに現実世界の限界に突き当たる
-        \item 代わりに, 実用性とコスト効率を維持するために, ロボティクスシステムは, 各コンポーネントの個々のピーク需要の合計ではなく, 予想されるピーク関節リソース需要に合わせてプロビジョニングする必要がある
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{貢献}
-    \begin{itemize}
-        \item これらの課題を克服するために, 自動レイテンシマネージャーを使用して, 実行時にタイミングを意識した方法で ROS システムを動的にプロビジョニングすることを提案する
-        \item 具体的には, 本論文では, ROS ライブレイテンシマネージャー (ROSLlama) を紹介する
-        \item これは, 既存のリアルタイム機構を利用して, 非リアルタイム専門家にとって使いやすく, かつ設定にほとんど手間がかからない方法で, 重要なcause-effectチェーンに沿ってレイテンシを制御できるようにするもの
+        \item 例えば, 前述の物体追跡コンポーネントと, ランドマークベースの自己位置特定コンポーネントに依存するロボットを再度考えてみよう
+        \item 一方, 人口が少ない田舎町よりも, にぎやかな街中を移動する方が, 物体追跡装置の処理時間はずっと長くなる
+        \item 一方, 認識可能なランドマークが多い都市部では, ほぼ一様な風景よりも自己位置推定がはるかに容易である可能性が高い
+        \item どちらの状況でも十分なリソースを確保するためには, システムインテグレーターは, 不毛の土地からなる賑やかな都市を想定したシステムを用意しなければならない
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS-Llama は, ユーザに複雑なシステムパラメーターを提供するよう求めるのではなく, イントロスペクションのみに依存し, 実行時に必要な全てのパラメーターを自動的に推定して, 状況の変化に応じてスケジューリングパラメーターを動的に調整する
-        \item もし, 指定されたレイテンシの目標が全て同時に達成できない場合（例えば, 不利な環境条件による一時的な過負荷が原因）, ROS-Llamaは制御された緩やかな劣化プロセスを開始し, システム統合者は純粋に宣言的方法で（すなわち, cause-effectチェーンが通過するコンポーネントを理解しなくても）cause-effectチェーンの重要性を指定することができるようにします
+        \item ロボット工学では, このような悲観的なシステム設計を行うと, すぐに現実的な限界に直面することになる
+        \item その代わりに, 実用的で費用対効果の高いシステムを維持するためには, 各コンポーネントのピーク需要の合計ではなく, 予想されるジョイントリソースのピーク需要に対してプロビジョニングを行う必要がある
     \end{itemize}
 \end{frame}
 
-\begin{frame}{貢献}
+\begin{frame}{貢献する}
     \begin{itemize}
-        \item  ロボティクス領域における動的レイテンシ管理の問題を調査し, 実用的なソリューションが満たさなければならない制約と要件を文書化する
+        \item これらの課題を克服するために, 我々は, 実行時に動的にタイミングを考慮した方法でROSシステムをプロビジョニングするための自動レイテンシマネージャを使用することを提案する
+        \item 具体的には, ROS Live latency manager (ROSLlama) を紹介する
+        \item これは, 重要なcause-effectチェーンに沿ったレイテンシを, 非リアルタイム専門家が使いやすく, かつ設定にあまり手間をかけない方法で, 既存のリアルタイム機構を使用して制御することを可能にする
+    \end{itemize}
+\end{frame}
 
-        \item  ROSのための最初の自動レイテンシマネージャであるROS-Llamaの設計と実装を紹介する
+\begin{frame}{貢献する}
+    \begin{itemize}
+        \item ROS-Llamaは, 複雑なシステムパラメータをユーザに要求するのではなく, 実行時に必要なパラメータを自動的に推定し, 状況の変化に応じてスケジューリングパラメータを動的に調整することが可能である
+        \item もし, 指定されたレイテンシの目標が全て同時に達成できない場合 (例えば, 不利な環境条件による一時的な過負荷が原因) , ROS-Llamaは制御された緩やかなデグレードプロセスを開始し, システムインテグレーターが純粋に宣言的な方法で (すなわち, cause-effectチェーンがどの部品を通過しているかを理解しなくても) cause-effectチェーンの重要性を特定できるようにする
+    \end{itemize}
+\end{frame}
 
-        \item ROS-Llamaが, 標準的なLinuxシステム上で標準的なROSコンポーネントを使用して, 移動ロボットの因果関係チェーンのレイテンシをうまく制御できることを実証する評価について報告する
+\begin{frame}{本論文の貢献}
+    \begin{itemize}
+        \item  ロボティクス領域における動的レイテンシ管理問題を探求し, 実用的なソリューションが満たさなければならない制約と要件を文書化する (第III章)
+
+        \item  ROSのための最初の自動レイテンシマネージャであるROS-Llamaの設計と実装を紹介する (セクションIV)
+
+        \item 標準的な Linux システム上の ROS コンポーネントを用いて, ROS-Llama が移動ロボットのcause-effectチェーンのレイテンシをうまく制御できることを示す評価について報告する (セクションVI)
 
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
-    ROS-Llama は, 数年に及ぶ研究とエンジニアリングの努力の結果であり, その間に最先端技術における多くの課題と制限に遭遇した
-
     \begin{itemize}
-        \item  ROS-Llama をより効果的かつ正確にする解析改善の機会
-
-        \item  システムのさらなる改善の妨げとなっている ROS および Linux プラットフォームの主な制限
+        \item ROS-Llamaは, 数年にわたる研究とエンジニアリングの努力の結果であり, その間, 我々は多くの課題や技術的な限界に遭遇した
+        \item セクションVIIでは, 以下の点を強調する
+              \begin{itemize}
+                  \item  ROS-Llamaをより効果的かつ正確にするための分析改善の機会
+                  \item  ROSとLinuxのプラットフォームには, システムのさらなる改良の妨げとなる大きな限界がある
+              \end{itemize}
     \end{itemize}
 \end{frame}
