--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/practical_considerations.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/practical_considerations.tex
@@ -1,108 +1,96 @@
 % !TeX root = main.tex
 
-\section{Practical Considerations}
+\section{PRACTICAL CONSIDERATIONS}
 \label{sec: practical considerations}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        ROS-Llamaを実装する際に遭遇した予期せぬ課題を説明し, その対処法を示す
+    \end{itembox}
+\end{frame}
+
+
+\subsubsection{Activation cycles}
+\label{sssec: activation cycles}
+
+\begin{frame}{サイクル発生ケース}
     \begin{itemize}
-        \item ROS-Llama を実装しているときに, いくつかの予想外の課題に遭遇した
-\item これには, 分析プラットフォームの拡張と, モデルエクストラクタとバジェットマネージャーでの特別な考慮事項が必要でした
-\item 以下にスケッチする
+        \item 自己位置特定コンポーネントAMCLにサイクルが発生した
+        \item AMCLコンポーネントは, ロボットの推定位置をpublishするだけでなく, その推定位置を生成するためにオドメトリ更新を消費するため, /tfトピックへのsubscribeとpublishの両方を行う
+        \item AMCLの位置更新は, オドメトリ座標フレームを更新するメッセージによってのみトリガされ, AMCL自身がpublishする位置更新ではトリガされない
     \end{itemize}
 \end{frame}
 
-\begin{frame}{アクティベーションサイクル}
+\begin{frame}{対処法}
     \begin{itemize}
-        \item ROS-Llama [6] で使用される応答時間分析は, ROS システムのコールバックを非巡回グラフとしてモデル化する
-\item これは, ROS のようなトピックベースの pub-sub システムにとって明らかな選択である
-\item グラフ内のサイクルは, 何らかのコールバックが直接的または間接的にそれ自体をアクティベーションすることを意味し, その結果として無限のアクティベーションサイクルが発生すると予想されるためである
+        \item /tfトピックのsubscriberセットから, サイクルを引き起こすコンポーネントを取り除く
+        \item このモデリング調整により, Casiniらの応答時間分析[6]が適用可能になる
+        \item より複雑なサイクルを実現するには, より洗練されたモデルの調整, または手動での介入が必要となる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 驚いたことに, それにもかかわらず, 自己位置推定コンポーネント AMCL (ROS ナビゲーションスタックの一部) でサイクルが発生した
-\item このコンポーネントは, 広く使用されている TF 座標変換ライブラリ [16] を通じてロボットの推定位置を公開する
-\item これは, ロボット工学アプリケーションで発生するさまざまな座標変換を管理するためのコア ROS ライブラリである
-\item すなわち, AMCL コンポーネントは, ロボットの推定位置を公開するだけでなく, オドメトリの更新を使用して推定値を生成する
-\item したがって, /tf トピックへのsubscribeとpublishの両方を行い, 明らかなサイクルが発生する
-    \end{itemize}
+
+\subsubsection{Scalar WCETs are pessimistic}
+\label{sssec: scalar wcets are pessimistic}
+
+\begin{frame}{スカラーWCETの悲観性}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            \begin{itemize}
+                \item 図は, AMCLノードの/tfコールバックの実行時間を観測したもの
+                \item 1回の起動にかかる最大コストはおよそ $56 \mathrm{~ms}$だが, そのケースは非常にまれ
+                \item コールバックの全てのインスタンスが $56 \mathrm{~ms}$ を必要とするという仮定は, 恐ろしく悲観的
+            \end{itemize}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \fullimage{tf_observe}
+        \end{column}
+    \end{columns}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{対処法}
     \begin{itemize}
-        \item これが無限ループをトリガしないのはなぜであるか?その答えは, /tf トピックで公開されたメッセージの内容にある
-\item AMCL の位置更新は, オドメトリ座標フレームを更新するメッセージによってのみトリガされる
-\item AMCL 自体によってpublishされた位置の更新など, 他の座標フレームを含む変換は無視されるため, サイクルをトリガすることはできない
+        \item このようなコールバックの実行時間要件をより正確に記述するために, ROS-Llamaは累積実行時間曲線 [17] を使用する
+        \item Casiniらの応答時間解析[6]を修正し, $r b f_{c}(\Delta)=E T^{+}\left(\eta_{c}(\Delta)\right)$ をコールバックのRBFとして使用するようにした
     \end{itemize}
+    \begin{block}{累積実行時間曲線 $E T^{+}(n)$}
+        実行時間曲線 $E T^{+}(n)$ は, 任意の $n$ 連続起動の最大累積実行時間の上界を示す
+        \notes{スカラーWCETは $E T^{+}(1)$ と等価}
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item この構成は「トピック内のトピック」を効果的に実装するため, ROS の設計哲学の慣用的な例とは言えません
-\item 悲しいかな, それは広く普及しているため, Reqの精神に基づいている
-\item (d) ROS-Llama は, ケースバイケースの推論に頼ることなく, 一般的にそのようなアクティベーションサイクルに対処する必要がある
-\item この目的のために, 開発者は無限ループを防ぐことを想定する
-\item これは, 独自のトピックにpublishされたコールバックが, トピック自体ではなく, トピックへの他のsubscriberのみをアクティベーションすることを意味する
-    \end{itemize}
+\begin{frame}{スカラーWCETと累積実行時間曲線の比較}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            \begin{itemize}
+                \item $E T^{+}(n)$ 曲線は, 1回の起動に $56 \mathrm{~ms}$ までかかる可能性があることを正しく表しているが, 40回連続実行の累積実行時間が $E T^{+}(40)=$  $122 \mathrm{~ms}$ を超えないことも示している
+                \item 一方, スカラーWCETモデルでは $40 \times E T^{+}(1)=2240 \mathrm{~ms}$ のコストが予測される
+            \end{itemize}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \fullimage{et}
+        \end{column}
+    \end{columns}
 \end{frame}
 
-\begin{frame}{}
+
+\subsubsection{Rare events}
+\label{sssec: rare events}
+
+\begin{frame}{稀なイベントの到着曲線の悲観性}
+    到着曲線は, 稀な非周期的事象に対して非常に不正確な場合がある
+    \begin{block}{例}
+    \setlength{\linewidth}{0.98\columnwidth}
     \begin{itemize}
-        \item これに対処するために, モデルエクストラクタは, 抽出されたモデルに仮想サイクルブレーカートピックを導入する
-\item サイクルを誘発するコンポーネントは, 代わりにこの仮想トピックにpublishされたかのようにモデル化される
-\item 循環誘導成分そのものこのモデリングの微調整により, ROS-Llama の能力が復活し, 本論文のケーススタディで Casini らの応答時間分析 [6] を適用できる
-\item より複雑なサイクルでは, より高度なモデル調整または手動介入が必要になる
+        \item システム起動数分後に2回連続して入力されるインタラクティブな操作を考える
+        \item 到着曲線推定器では, 観測された2つのイベントのみを考慮し, 短い周期を持つ周期的到着パターンに従っていると悲観的に誤判定してしまう
     \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{スカラー WCET は悲観的である}
+\begin{frame}{対処法}
     \begin{itemize}
-        \item リアルタイムの文献における一般的なモデリングの選択は, コールバックやジョブなどの実行可能なエンティティの最大実行時間をスカラー WCET パラメーターで記述することである
-\item $n$ 連続アクティベーションの共同コストは, 単純に $n$ とスカラー WCET の積として推定される
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item ROS のコンテキストでは, これは非常に悲観的であることが判明した
-\item 図 2 は, 前述のようにさまざまなメッセージを処理する AMCL ノードの /tf コールバックの観測された実行時間を示している
-\item 描かれたトレースでは, 1 回のアクティベーションで観察された最大コストは, およそ $56 \mathrm{~ms}$ でした
-\item しかし, そのような高価なアクティベーションがまれであり, 2 つのピークが多くの「安価な」アクティベーションによって分離されているというパターンに従っていることは明らかである
-\item したがって, コールバックの全てのインスタンスで $56 \mathrm{~ms}$ が必要であると仮定するのは, 非常に悲観的である
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item そのようなコールバックの実行時間要件をより正確に記述するために, ROS-Llama は累積実行時間曲線 [17] を使用する
-\item これは, 複数の連続した呼び出しの累積実行時間要件を記述する, より表現力豊かな実行時間モデルである
-\item より正確には, 実行時間曲線 $E T^{+}(n)$ は, 任意の $n$ 連続アクティベーションの最大累積実行時間を制限する
-\item したがって, 従来のスカラー WCET は $E T^{+}(1)$ と同等である
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 結果として得られる精度の向上は, 図 2 の右側の挿入図で確認できる
-\item $E T^{+}(n)$ 曲線は, 1 回のアクティベーションに最大 $56 \mathrm{~ms}$ かかる可能性があることを正しく表しているが, 40 回の連続実行の累積実行時間が $E T^{+}(40)=$ を超えたことがないことも示している
-\item $122 \mathrm{~ms}$
-\item 同じ数のアクティベーションの場合, スカラー WCET モデルは $40 \times E T^{+}(1)=2240 \mathrm{~ms}$ のコストを予測する
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item そのため, Casini らの応答時間分析 [6] を修正して, $r b f_{c}(\Delta)=E T^{+}\left(\eta_{c}(\Delta)\right)$ をコールバックの RBF として使用した
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{まれなイベント}
-    \begin{itemize}
-        \item 抽出された到着曲線は, まれな非周期的なイベントの場合, 非常に不正確になる可能性がある
-\item 例えば, 数分間の操作の後, 短い間隔で 2 回続けて到着する対話型オペレーター入力を考えてみよう
-\item 単純な到着曲線推定器は, 観測された 2 つのイベントのみを説明し, それらを短い周期で周期的な到着パターンに従っていると悲観的に誤って特徴付ける
-\item システムの起動後, イベントが 2 回しか観測されていないことを組み込むために, システムの起動を各コールバックの仮想アクティベーションとしてさらに扱いる
-\item 上記の例では, これにより, モデルエクストラクタは, 2 つのイベントが立て続けに発生する可能性があるが, 3 つ以上のイベントを観察するにははるかに長い時間がかかると結論付けることができる
+        \item システム起動以来2回しか観測されていないことを組み込むために, システム起動をコールバックの仮想起動として扱う
+        \item これにより, 上記の例では, 2つの事象が連続して発生することはあっても, 3つ以上の事象を観測するには, はるかに時間がかかるとモデル抽出器が判断できる
     \end{itemize}
 \end{frame}
