--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/related_work.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/related_work.tex
@@ -3,55 +3,77 @@
 \section{RELATED WORK}
 \label{sec: related work}
 
-\begin{frame}{}
+\begin{frame}{既存研究との比較表}
     \begin{itemize}
-        \item ロボティクスワークロードのリアルタイムのニーズは, 適切な API とランタイムシステムを定義するこの分野の古典的な論文で, 長い間集中的な研究の対象となってきた
-\item よりよく知られている例は, ROS-Llama, ETHNOS [37, $38]$, および $\mathrm{XO} / 2$ [39] で使用されているのと同様の制御された劣化へのアプローチを導入した HARTIK [35, 36] である
-\item 本論文の焦点は, Req のために変更できない, 最近人気のある ROS である
-\item (d).
+        \item ROS-Llama は, 以前のコンテキストで個別に研究されてきた確立された手法とアイデアに基づいて構築されている
+        \item ROS-Llama の主な貢献は, これらの概念を実用的で使いやすいシステムに統合し, ROS 固有の課題を克服するように適応させたこと
     \end{itemize}
+    \vspace{-5mm}
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|c|c|c|c|c|} \hline
+                              & デグレードアプローチ & ROS & ROS2 & \tabml{応答時間分析に基づく       \\予測プロビジョニング} & \tabml{バジェット割り当て\\アルゴリズム} \\\hline
+                    [35--39]  & \ch                  &     &      &                             &     \\\hline
+                    [42--54]  & \ch                  & \ch &      &                             &     \\\hline
+                    [55, 56]  &                      & \ch & \ch  &                             &     \\\hline
+                    [61]      &                      &     &      & \ch                         &     \\\hline
+                    ROS-Llama & \ch                  & \ch & \ch  & \ch                         & \ch \\\hline
+                \end{tabular}
+            }
+        \end{table}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item  一時的な過負荷に直面した適応と優雅な劣化の一般的なアイデアも, 以前の研究で多くの角度から検討されてきた
-\item 実質的に異なる, 非常によく研究されているアプローチは, サービスレベル $[15,40-45]$ の概念である
-\item これは, アプリケーション開発者に依存して, さまざまな動作モードと各モードに関連付けられたユーティリティの概念を明示的に公開する
-\item ROS-Llama のはるかに狭いが単純なメカニズムと比較すると, このようなアプローチは, 開発者の賛同が必要なため, 採用するのがより困難である
-\item ROS コンポーネントは通常, 複数の動作モードを公開しない
-    \end{itemize}
-\end{frame}
+\forme{
+    \begin{frame}{}
+        \begin{itemize}
+            \item ロボティクスワークロードのリアルタイムのニーズは, 適切な API とランタイムシステムを定義するこの分野の古典的な論文で, 長い間集中的な研究の対象となってきた
+            \item よりよく知られている例は, ROS-Llama, ETHNOS [37, $38]$, および $\mathrm{XO} / 2$ [39] で使用されているのと同様の制御されたデグレードへのアプローチを導入した HARTIK [35, 36] である
+            \item 本論文の焦点は, Req のために変更できない, 最近人気のある ROS である
+            \item (d).
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 別の一般的な適応戦略は, フィードバック制御理論に依存してスケジューリングパラメーターを調整することである
-\item 以前の研究では, 期間 $[46,47]$, QoS レベル $[42,45,46,48]$, 予約バジェット $[43,49-54]$ などを直接制御する方法が検討されてきた
-\item このようなアプローチは, 原則としてROSに移すことができるが, そのコンテキストではまだ体系的に研究されていない
-\item ROS-Llama は, フィードバックに基づくリアクティブプロビジョニングではなく, ワークロードの明示的に抽出されたモデルに基づく応答時間分析 [6] に基づく予測プロビジョニングを実現するという点で, これらの従来のアプローチとは異なる
-    \end{itemize}
-\end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item  一時的な過負荷に直面した適応と優雅なデグレードの一般的なアイデアも, 以前の研究で多くの角度から検討されてきた
+            \item 実質的に異なる, 非常によく研究されているアプローチは, サービスレベル $[15,40-45]$ の概念である
+            \item これは, アプリケーション開発者に依存して, さまざまな動作モードと各モードに関連付けられたユーティリティの概念を明示的に公開する
+            \item ROS-Llama のはるかに狭いが単純なメカニズムと比較すると, このようなアプローチは, 開発者の賛同が必要なため, 採用するのがより困難である
+            \item ROS コンポーネントは通常, 複数の動作モードを公開しない
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item  $\operatorname{ROS} 1[55,56]$ のリアルタイム機能に関する以前の研究があるが, 改善されたリアルタイムサポートが ROS 2 の重要な差別化要因であるため, これらの調査結果がどの程度適用されるかは不明である
-\item [57] は, ROS 1 と比較して ROS 2 の予測可能性を評価し, ROS 2 の改善されたタイミング精度がより良いパス追従精度をもたらすことを発見した
-    \end{itemize}
-\end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item 別の一般的な適応戦略は, フィードバック制御理論に依存してスケジューリングパラメーターを調整することである
+            \item 以前の研究では, 期間 $[46,47]$, QoS レベル $[42,45,46,48]$, 予約バジェット $[43,49-54]$ などを直接制御する方法が検討されてきた
+            \item このようなアプローチは, 原則としてROSに移すことができるが, そのコンテキストではまだ体系的に研究されていない
+            \item ROS-Llama は, フィードバックに基づくリアクティブプロビジョニングではなく, ワークロードの明示的に抽出されたモデルに基づく応答時間分析 [6] に基づく予測プロビジョニングを実現するという点で, これらの従来のアプローチとは異なる
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item  最後に, リソース予約の最適なバジェットと期間を見つける問題は, 個々のタスク [12-15, 58-60] と DAG [61] の両方について, 広く研究されている
-\item しかし, ROS コールバックグラフには複雑な相互依存関係があるため, これらのアプローチを ROS に直接適用することはできない (セクション IV-C を思い出してください)
-\item それにもかかわらず, ROS固有の課題に対処するためにそのようなアプローチを適応および拡張する将来の作業は, ROS-Llamaの現在のバジェットヒューリスティックに取って代わる可能性がある.
-    \end{itemize}
-\end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item  $\operatorname{ROS} 1[55,56]$ のリアルタイム機能に関する以前の研究があるが, 改善されたリアルタイムサポートが ROS 2 の重要な差別化要因であるため, これらの調査結果がどの程度適用されるかは不明である
+            \item [57] は, ROS 1 と比較して ROS 2 の予測可能性を評価し, ROS 2 の改善されたタイミング精度がより良いパス追従精度をもたらすことを発見した
+        \end{itemize}
+    \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 要約すると, ROS-Llama は, 以前のコンテキストで個別に研究されてきた確立された手法とアイデアに基づいて構築されている
-\item ROS-Llama の主な貢献は, これらの概念を実用的で使いやすいシステムに統合し, ROS 固有の課題を克服するように適応させたことである
-\item ROSLlama は, ROS などの実世界のロボティクスフレームワークによってもたらされる複雑さに対処する最初の自動レイテンシマネージャーである
-\item その際立った特徴は, 市販のプラットフォームでホストされている変更されていないストック Linux カーネルで実行されている既存の ROS アプリケーションに適用できることである
-\item III.
-    \end{itemize}
-\end{frame}
+    \begin{frame}{}
+        \begin{itemize}
+            \item  最後に, リソース予約の最適なバジェットと期間を見つける問題は, 個々のタスク [12-15, 58-60] と DAG [61] の両方について, 広く研究されている
+            \item しかし, ROS コールバックグラフには複雑な相互依存関係があるため, これらのアプローチを ROS に直接適用することはできない (セクション IV-C を思い出してください)
+            \item それにもかかわらず, ROS固有の課題に対処するためにそのようなアプローチを適応および拡張する将来の作業は, ROS-Llamaの現在のバジェットヒューリスティックに取って代わる可能性がある.
+        \end{itemize}
+    \end{frame}
+
+    \begin{frame}{}
+        \begin{itemize}
+            \item 要約すると, ROS-Llama は, 以前のコンテキストで個別に研究されてきた確立された手法とアイデアに基づいて構築されている
+            \item ROS-Llama の主な貢献は, これらの概念を実用的で使いやすいシステムに統合し, ROS 固有の課題を克服するように適応させたことである
+            \item ROSLlama は, ROS などの実世界のロボティクスフレームワークによってもたらされる複雑さに対処する最初の自動レイテンシマネージャである
+            \item その際立った特徴は, 市販のプラットフォームでホストされている変更されていないストック Linux カーネルで実行されている既存の ROS アプリケーションに適用できることである
+            \item III.
+        \end{itemize}
+    \end{frame}
+}
